--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,26 +1,27 @@
 ---
-title: 国际｜美、英、日、欧盟等国拟对俄祭出一系列严厉制裁
+title: 普大帝驻颜有术
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/2047088/)
+`银河勇气之星` [轉載自GNews](https://gnews.org/zh-hans/2047116/)
 
-**撰文/ 港台前线｜发布日期/ 22/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/美、英、日、歐盟等國擬對俄祭出一系列嚴厲制裁-.jpg)
-**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)**
+By：银河勇气星｜楚天秋
+![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-22-18.43.10.png)
+护肤不是女人的专利，如果说中共国局部地区仍然有虱子在流行，不太有条件经常洗澡的情况下，男人用洗面奶的普及率也不太乐观，成套护肤的估计更少了。至于打玻尿酸、肉毒杆菌，拉皮做美容手术，除了女明星之外，大概寥寥无几。由于环境污染加重，最近二十年多数护肤大牌走崇尚自然的路子，不再奢谈今年二十明年十八，能避免与年龄不相符的过早衰老则是成功有效，堪称回归正道。这一届中南坑也有点伪自然的倾向，只有五年时间，每个老杂毛都在快速衰老，除了习太阳的加速作用功不可没，爆料革命时不时揭露换肾、植发的真相，也让它们装不下去了。鬼子六（王岐山）算是个特例，总是细皮嫩肉面色潮红，不愧“公公”的称号。用相由心生来解释，老杂毛们心恶面黑也是难免的，精气神又大不如前，尤以习太阳为甚，一副随时可以能挂掉的毫无生机的胖脸，谁看谁生厌。从保护妇女权益的角度看，有些事也怪不得彭将军。
 
-俄罗斯总统普京承认乌克兰东部两大亲俄区域独立，并下令派军进驻后，美国总统拜登最先宣布制裁乌东两地。
+原本以为普大帝身体保养得很好，不料郭先生说普京靠打针强撑。怪不得把俄罗斯最高权力左右手倒来倒去的这些年，普大帝身材变化不大，看起来依然硬朗。以注重个人形象为前提，普大帝曾经也想积极融入国际社会，与习太阳的不管不顾有很大区别。俄罗斯至少表面上是民主国家，这大概又是欧美想接受他的原因之一。注重个人形象的提升，和民选政客们就有了共同语言，这让普大帝获得过精明强干的美誉。但是对于克格勃出身的普京，总是习惯于搞政治暗杀伎俩，又让欧美各国看不起，或者说人人自危。毕竟多数政客不能玩普大帝的长期执政，不能把国家利益用个人恩怨的方式去解决，一旦退休下台，被普大帝下个毒什么的就不好玩了，玩政治玩的是民意，又不是玩命。普大帝能一直连任，却得变着法儿地走选举的过场，这也是其不如习太阳的关键之处。习太阳直接把宪法改了，终身权力在手，无须任何理由，专权的气势上胜过普京，也就能到处腆着草包肚子，满脸横肉地指手画脚，不需要在形象上找补。
 
-拜登21日深夜签署行政令，禁止美国人在自称为顿涅茨克人民共和国及卢甘斯克人民共和国的乌东地区进行新投资、贸易及融资。白宫发言人普萨基强调，针对俄罗斯的制裁会陆续有来，期望俄罗斯当局拭目以待。
+郭先生爆料普、习二人密谈两个半小时。岁月不饶人，不管是否要脸，普大帝和习太阳都面临同样的危机，权力得来不易，失去却可能在顷刻间。就算压得住各自国内蠢蠢欲动的反对声音，也逃不过寿数天命，哪天两腿一蹬撒手而去了，一切又都白费，趁着还能蹦跶，做点惊天动地的事情，不能流芳百世，也要遗臭万年。独裁者的想法大概如此，越接近肉体消亡，越希望折腾一番，有一口气在，就得任性而为，哪管死后洪水滔天。正所谓“知音”难觅，普大帝对日渐被排挤出欧洲满怀失落，习太阳为完成“统一”夜不能寐，两人借冬奥的幌子在经济和军事上交换看法，达成某种程度的合作，取长补短不难理解。普大帝腰里别着核弹，手头却不宽裕，习太阳对硬实力底气不足，但能共全民之产为己所用，普、习联手，各取所需互相利用以图“双赢”。
 
-日本首相岸田文雄亦于今日（22日）较早时间表示，日本不会接受任何违反国际法的行为，已准备好联同美国及其余七大工业国成员一同制裁俄罗斯。
+只是这种联盟并不稳定，谁也说不准自己什么时候就挂了，而且普大帝如果被美国消磨了意志，拿下欧洲的计划无法实现，但经济利益不止习太阳可以给，欧美也有，只是讨价还价到什么程度的问题。习太阳的唯一希望却在普京身上，失去和俄罗斯的联盟，什么幻想都会破灭，从放出新冠病毒那天起，习太阳已经没有退路了，欧美不会放过他，党内矛盾也无法缓解。这里不得不提的是金（正恩）三胖，为什么习太阳羡慕他呢？因为金三胖妥妥的家天下三代，还是八零后，年龄优势使其有很长时间做选择，实质上并没有大规模伤害欧美的行动和能力，放了这么多“二踢脚”，楞没敢掉到谁的地盘上，可见三胖尚有那么一点点见风使舵、待价而沽的“自知之明”。金三胖冬奥会都没参加，还能放车皮过境收粮，摆明态度是有茅台喝的时候他在，丢脸现眼的事情别找他，因为他没资格参加冬奥会，理由很充分。
 
-另外，欧盟委员会主席冯德莱恩及欧洲理事会主席米歇尔在联合声明中也斥责俄罗斯入侵乌克兰的行为，违反了国际法，并承诺欧盟将会以制裁的方式对付是次违法行为的参与者。
+习太阳搞乱欧美首当其冲，不过打热战还得凭实力说话，普大帝敢于直面美国，敢想欧洲的地盘，敢说乌克兰是他的女人，这些是习太阳学不来的。只是郭先生爆料普京身体状态也不好。普大帝靠打针强撑着脸面，保持着身体状态终究不是长久之计，要是没唬住欧洲，没吓住乌克兰，又没打过美国，结局悲惨可想而知。现代科技某种程度能维持一段时间表面的青春，只是治标之举，经不起身体器官和思想的腐坏，误交损友，可能掉坑里出不来。
 
-**不过，最值得关注的还是英国，自前苏联1991年解体后，英国成为俄罗斯超级富豪转移资产及移民热门地点，伦敦蓬勃金融市场亦为俄企吸纳外来资金首选，相信英国的制裁将对俄罗斯的特权阶级造成最大影响。**
+* * *
 
-**英国首相约翰逊早前表示，当局就俄乌局势进行了紧急会议，并就针对俄罗斯的“一揽子制裁”已达成共识，预计将在伦敦时间22日中午宣布对俄的经济制裁，同时，约翰逊强调，此次严厉措施只属首轮制裁，随着俄方行动升级制裁力度亦将随之加码，不排除将覆盖俄罗斯及各地的寡头巨富。**
+作者：楚天秋
+发布：骄子
 
-来源｜[路透社](https://www.reuters.com/world/uk/uk-says-russian-invasion-ukraine-has-begun-2022-02-22/)
-
+[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/345-1.jpg) 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
