--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,56 +1,74 @@
 ---
-title: 【TopNews】新西兰病例数爆炸式增加时期即将发现“低技能”工人的真正价值
+title: 中共国经济增长率降至零
 ---
-`topnews` [轉載自GNews](https://gnews.org/zh-hans/2046945/)
+`topnews` [轉載自GNews](https://gnews.org/zh-hans/2046960/)
 
-随着疫情持续扩散、病例数爆炸式增加，新西兰将有大量的所谓“低技能”劳动者感染或被迫隔离。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture1-18.png)
 
-NZ Herald商业编辑、专栏作家Damien Venuto发文称《新西兰即将发现“低技能”工人的真正价值》。
-![图片](https://mmbiz.qpic.cn/mmbiz_jpg/KtRNQQrEUGmNU7KYdrWHw12Uw4yz5vwtyJqoxb3RqXFqkhmfricic3F6icwISKzVsg7p8hIHKdqr7zndp2UeOxiaGQ/640?wx_fmt=jpeg&amp;wxfrom=5&amp;wx_lazy=1&amp;wx_co=1)
+图片来自原文
 
-（图片：网页截图）
+中共对外宣称，其国内生产总值在2021年第四季度放缓至4%。中共政府告诉全国人民，它将稳定经济，通胀压力正在缓解。
 
+问题是中共国是否真的以4%的速度增长呢？请相信我们，答案显然是否定的，它最好的增长率是0%。我们评估的数据及观点，如下：
 
+**首先，中共政府向来谎话连篇****，扭曲事实**
 
-随着这种高传播性毒株在新西兰肆虐，这些工人将被迫在家隔离，更糟糕的是，他们的工作无法在家完成。
+众所周知，你从中共那里听到的一切，要么是谎言，要么是被大幅操纵的“真相”，甚至连中共内部都不相信统计局公布出来的数据。这并非夸大其词。
 
-“我们已经得到警告，在疫情爆发的高峰期，可能会有多达35万名新西兰人同时在家隔离。”
+**其次，中共病毒（****COVID-19****）的死亡人数、军队伤亡人数、人口增长数，等数据都是假的**
 
-文章称，上周的数学模型显示，在疫情持续三到四个月的情况下，预计总共会感染150万人，包括386,400例病例、11,500例住院和460例死亡。
+事实上，中共国因中共病毒致死的死亡率少报了17,000%。它报告了4,646人死亡，而实际上大约有170万人死于中共制造的病毒。
 
-很多行业已经做好准备，譬如奥克兰机场就计划损失四分之一的劳动力，超市公司Foodstuffs预计这一数字将接近30%。葡萄酒行业警告，今年的收成面临巨大挑战。
+不仅如此，中共还进行了长达一年的公关，说中共政府是如何打败病毒的，而帝国主义的美国仍然在毁灭性的大流行病下挣扎。
 
-Venuto写道：
+**第三，中共在世界银行****“经商便利度”排名****中违规操纵**
 
-“我们很快就会看到被政客们贬低为‘低技能’的工人们的真正经济价值。”
+而且，中共在世界银行的 “经商便利度 “排名中的操纵行为更让人震惊。
 
-随着疫情大面积爆发，各行业员工缺勤将对新西兰经济造成严重影响。
+中共国在2018年和2020年的榜单中犯了数据违规行为，以便在榜单中获得更好的排名，并从印度和越南等国家抢走业务。
 
-新西兰Footprint Connect和Umbrella Wellbeing两家公司本月发布的一份白皮书指出，数据表明，2020年新西兰经济因工人缺勤损失了18.5亿纽币，平均每个工人缺勤4.2天/年。随着Omicron笼罩新西兰全国，可以预计未来几个月新西兰工人生产力的损失将是巨大的。
+世界银行应该从在中共国境内消失的商人那里了解到做生意并不那么容易。
 
-随着大量的一线工人在未来几周将被感染、因密接在家隔离或需要照顾染病的家人，我们面对的将是空货架、无人配送的包裹以及烂在树枝上的水果。![图片](https://mmbiz.qpic.cn/mmbiz_jpg/KtRNQQrEUGmNU7KYdrWHw12Uw4yz5vwtgwuWnm26VSYboLmMmTibKibqAw01Nk1BTLHU4oJrbuDUtd1OtobhLzXQ/640?wx_fmt=jpeg&amp;wxfrom=5&amp;wx_lazy=1&amp;wx_co=1)
+更明显的操纵是，当中共国违规被抓时，世界银行却停止了所谓“经商便利度”的排名。很明显，中共国利用在该机构的内部影响力，操纵了整个事件。
 
-Photo: RNZ / Claire Eastham-Farrelly
+**中****共****国的经济处于混乱状态**
 
-很显然，称呼这些工作人员为“低技能”是不合适的。有政界人士和专家呼吁将他们称为“低工资”工人，因为事实就是如此。
+你如何理解GDP？粗略的概念是：一个国家或地区在一个固定时间段内进行的经济活动的总和。
 
-在去年的预算前演讲中，总理阿德恩称新西兰移民法即将调整，将使政府“将吸引高技能而不是低技能移民”。
+中共说，它在上一季度增长了4%。那我们来看看事实吧。
 
-“对于一个用词如此谨慎的政府来说，贬低数十万新西兰人的日常工作是多么轻而易举。”Venuto说。
-
-低薪工作是不一定令人愉快的工作，存在感不强。只有当它突然消失，外界才会注意到。就像空气和水。“这正是未来几个月将会看到的。”
-
-我们即将进行一项实验，看看当这些没有人喜欢做的工作突然消失了，会发生什么。
-
-[援引链接：](https://www.nzherald.co.nz/business/damien-venuto-new-zealand-about-to-find-out-the-real-value-of-low-skilled-workers/WZZ5E55HCKQE6TFL6TOIE2QPR4/)
-
-撰稿/米拉雅
-
-审阅/邱杰斯
-
-上传/天赐良闻
+- 中共国是一个以出口为基础的经济体，正处于与印度、澳大利亚、美国和欧盟的贸易战中；
+- 北京在军事国防部队上花费巨资，几乎与所有邻国进行了军事冲突；
+- 中共国的房地产行业已经崩溃了；
+- 港口一直堵塞；
+- 中共国百姓正处于巨大的中共病毒危机中
 
 
+准确地说，中共国经济正处于一场完美风暴之中。这一切都始于中共国主席习近平与美国和澳大利亚的贸易战，这阻碍了中共国的出口行业，也在整个中共国造成了电力危机。
+
+关于国防开支的问题是，无论中共国在这一领域投资多少，都收不回投资成本了。
+
+更巨大的打击是中共国的房地产行业的崩溃。中共国的建筑业已经是个脆弱的泡沫。它曾经推动了相关产业的发展，提高了增长数字。现在，随着恒大和其他许多房地产开发商的倒下，中国的房地产正在走向衰落，并使中共国经济随之崩溃。
+
+其实，中共国一直没能遏制中共病毒。当初武汉170万人死亡。现在，像西安、郑州、天津等省市已面临严格的封锁。当中共国的百姓不受控制地被感染时，中共国不可能增加其经济活动。
+
+由于中共病毒的爆发，中共国的港口也时不时地被堵塞。
+
+综上所述，这正是中共国经济的现况，这也是评估中共国GDP增长为零的原因。
+
+备注：
+
+- 疫苗：是指新冠疫苗
+- 中共病毒：是指新冠病毒Covid-19
+- Covid疫苗本身就是随时爆发的病毒
+- 我们不反疫苗，只针对假疫苗
+- 我们不反科学，只针对反人类
+
+
+新闻来源链接：[https://tfiglobalnews.com/2022/01/17/chinas-economic-growth-rate-tanks-to-zero-per-cent/](https://tfiglobalnews.com/2022/01/17/chinas-economic-growth-rate-tanks-to-zero-per-cent/)
+
+本文作者：Rebecca (一切心皆不可得！)
+上传排版：Hong
 
  
 
