--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,30 +1,25 @@
 ---
-title: 独裁与垄断是万恶之源
+title: 《历史的今天》2022.02.22
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2046936/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2046948/)
 
-撰搞：友情友义
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-26.jpg)图片来自网络
-邪恶的体制，在政治上表现为独裁，在经济上表现为垄断。近代，从希特勒到斯大林再到毛泽东，今天，从中共国到北朝鲜再到塔利班，对人民奉行的都是强权统治和残酷压榨的邪恶政策。
-
-**         **自前苏联解体，中国宣布改革开放以后，为了打开中国的市场，西方各国给予了中国在政策、金融和技术方面前所未有的帮助。但万万没想到的是，这样做的后果只是让共产党独裁体制的僵尸重新复活，并把共产主义的毒素注入了西方的政治、经济、科技和文化等各个领域，直至用病毒武器把全世界推入了万劫不复的境地。
-
-**          **国际垄断资本的本性是贪婪，为了利益他们会毫不犹豫的打破人性的底线与魔鬼做交易。让人吃惊的是，**CCP**病毒武器的制造技术竟然是由美国人帮助开发和资助的，而就在这人类的生死关头，那些跨国资本控制的媒体，一直在制造假信息，打压传播病毒、疫苗真相的声音。
-
-更有甚者，西方各国政府，不去病毒溯源，而是与垄断资本控制的药企勾结，别有用心的用行政命令、限制自由、强迫失业、冻结银行账户、强迫退学等手段逼迫人民注射毒疫苗，致使半数以上的地球人口生灵涂炭。
-
-**         **每个政客的心里都潜伏着一个魔鬼，就是独裁，毎一个寡头的心里都隐藏着一个妖怪，就是垄断，当民主与法制因某种原因被削弱时，这些妖魔鬼怪就会跳出来作恶。
-
-面对大众反对强制疫苗的抗议运动，欧洲各国政府居然效法**CCP**，调用警察暴力镇压，再现了**2019**香港民众被港府镇压的场景。大媒体本应该是真实、正义代言人,但在垄断资本的控制下，主流媒体对真实的声音封网禁言,打压真相,制造假信息做尽了坏事，成了魔鬼的罪恶帮凶。本应是以治病救人为天职的大药企，也为了巨额的利益而与各国政要合谋，变成了制造杀人疫苗的机器。
-
-**        **垄断资本可以提供维持独裁体制所需的金钱，而独裁政府又可以保护寡头的垄断地位，富可敌国的金融巨头们也可以根据需要而推出自己的强权代言人。这一对妖魔因相互需求而缠绕在一起，贪婪的吞噬着人类的生命和全球的财富，只要它们存在一天，世界就永无宁日。
-
-世界大变革在即，让我们放弃幻想，高举新中国联邦的旗帜，紧跟着爆料革命的发起人郭文贵先生，大声唤醒世界人民，从地球上彻底铲除邪恶的独裁和垄断，让人类社会得以正常的生存和发展。
+作者：映兰轩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/nizhou.png)
+1. 1784年：第一艘与中国进行贸易的美国船只 “中国皇后号 “从纽约起航
+2. 1865年：田纳西州通过了一部废除奴隶制的新宪法
+3. 1941年：纳粹警察突袭阿姆斯特丹，围捕了429名年轻的犹太人，准备将其驱逐到布痕瓦尔德和毛特豪森集中营
+4. 1943年：德国反纳粹主义组织白玫瑰成员汉斯·绍尔和苏菲·绍尔两兄妹被纳粹德国政府送上断头台处死
+5. 1972年：美国第37任总统总统理查德-尼克松在北京会见中国总理周恩来
+6. 1973年：美国和中国同意在北京和华盛顿特区建立联络处
+7. 1997年：苏格兰罗斯林研究所宣布世界上第一个克隆的哺乳动物（来自成人细胞）–多莉羊
+8. 2017年：《自然》杂志宣布发现7颗地球大小的行星围绕Trappist-1号恒星运行 – 提高了外星生命的可能性
+9. 2019年：朝鲜驻西班牙大使馆遭朝鲜抵抗组织“自由朝鲜”的人员入侵，8名使馆职员被打伤，一批存有重要情报讯息的电子产品失窃
 
 
+* * *
 
-编辑：云彩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+*发布：Theodosia*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
