--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,46 +1,42 @@
 ---
-title: 人民车队向华盛顿挺进 国会大厦将再竖围栏
+title: 普京承认乌东分离地区独立地位 考验美国的时候到了
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2046911/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046946/)
 
-翻译：Lulumi
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-72.jpg)
+俄罗斯总统普京宣布承认乌克兰东部两分离地区的“独立地位”，同时还宣布将派遣部队进驻“维和”。美国两党议员对此同声发出谴责，并呼吁迅速对俄做出制裁。然而，软弱的制裁显然扭转不了局势，考验美国的时刻到了。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2037.png)由于2021年1月6日国会大厦骚乱后的安全问题，围栏在去年的大部分时间里都一直被保留。
+据《美国之音》2月22日报道，俄罗斯总统普京周一（2月21日）签署法令，承认乌克兰东部两个俄语地区——顿涅茨克和卢甘斯克的“独立国家”地位。随后，普京又进一步宣布将派遣俄罗斯军队到上述两个地区进行“维和”行动。
 
-美国警察表示“知道”抗议口罩和疫苗强制令的卡车司机组成的“自由车队”正前往华盛顿特区。
+普京的这一决定迅速加剧了各国对俄罗斯将入侵乌克兰的担忧。此前美国曾表示，俄罗斯一旦承认这两个分离地区的独立地位，即等于“严重违反国际法”。
 
-在2021年的大部分时间里包围国会大厦的围栏将在下周重新安装，因为国会准备在3月1日接待乔·拜登总统发表其首次国情咨文。
+美国国会两党议员对此表示强烈担忧。有议员直言，莫斯科的行动“等同于入侵乌克兰”；还有议员呼吁拜登政府尽速对俄罗斯施加制裁。
 
-美国国会大厦警察正在为抗议口罩和疫苗规定的卡车司机做准备，因为“自由车队”在加拿大示威数周并造成重大封锁后，将前往华盛顿特区。
+参议院外交关系委员会主席梅嫩德斯（Sen. Bob Menendez, D-NJ）周一发表书面声明，谴责普京的行动是对乌克兰主权的攻击，是公然违反国际法。梅嫩德斯表示，任何俄罗斯军队或代理部队若进入顿巴斯地区，拜登政府和美国的欧洲盟友都必须毫不犹豫地实施重大制裁，让俄罗斯为其不正当的行为付出切实、深远和巨大的代价。
 
-抗议者能够封锁温莎和底特律之间的大使桥边境口岸，因为他们对中共病毒COVID-19有关戴口罩和强制接种疫苗的规定表示厌恶。
+共和党联邦参议员格雷厄姆（Lindsey Graham）和民主党联邦参议员怀特豪斯（ Sheldon Whitehouse）共同率领的一组跨党派国会议员周一也发表联合声明称，美国将和欧洲盟友团结一致对抗俄罗斯的侵略。
 
-现在，加利福尼亚人正计划加入一个被称为“人民车队”的美国抗议活动，并在本周前往华盛顿特区。
+在普京周一将他的决定通知法国和德国领导人，并随后签署文件宣布乌克兰顿巴斯的顿涅茨克和卢甘斯克两地不再是乌克兰的一部分后，美国总统拜登于当日发布行政令，禁止美国法人对所谓“顿涅茨克人民共和国”和“卢甘斯克人民共和国”这两处乌克兰地区进行新的投资、贸易和金融往来。这项行政令还将提供对任何被判定在乌克兰的这些地区进行运作的人实施制裁的授权。
 
-这场新的示威活动计划于周三从加利福尼亚州的巴斯托出发，在40号州际公路上进行。这一抗议活动的全国组织者莫琳·斯蒂尔说，她不会透露具体的地点，因为担心会受到报复。
+不过，美国国会多位共和党人仍对拜登政府的做法表示不满。众议院外交事务委员会和国土安全委员会共和党领袖周一在发表联合声明谴责俄罗斯的同时，也批评拜登政府的制裁措施“力度不足”。
 
-斯蒂尔告诉Newsmax，预计大约有1000辆卡车开始游行，她预计随着车队向东行驶，会有更多的卡车加入进来。
+共和党联邦众议员麦考尔（ Michael McCaul）和罗杰斯（ Mike Rogers）在声明中表示， 美国必须立即让俄罗斯为这种公然侵略行为和公然侵犯乌克兰主权与领土完整的行为付出真正的代价。但不幸的是，白宫到目前为止所公布的制裁完全没有效用。象征性的制裁只会让普京更加胆大妄为。
 
-斯蒂尔承认：“加拿大的车队在事情发生时非常有组织。我们的车队，他们有一个月的通知，所以我们担心的是破坏性团体的加入。我们试图只是为反抗议做准备，并为此采取安全防范措施。
+麦考尔和罗杰斯呼吁拜登政府尽速对俄罗斯施加更严厉的制裁，包括永久性终止有争议的从俄罗斯到欧洲横跨波罗的海的“北溪2号”（Norm Stream 2）天然气管道项目。
 
-“这是关于我们的权利，以及后代的自由，”车队组织者在Facebook上写道。“这不是关于政党，而更多的是关于一个忘记了自己的位置，不顾我们的开国元勋的指示的政府。”
+参议院情报委员会副主席卢比奥参议员（Marco Rubio,）周一也接连在推特上发文，指责俄罗斯“入侵”乌克兰。卢比奥还指出，莫斯科的“维和部队”一旦进入乌克兰，当地紧张局势将立刻急速升高，连带着“全球能源价格也将迅速攀升”。
 
-据福克斯新闻周日报道，安全官员正在重新竖起国会大厦周围的围栏，准备在拜登发表今年最重要的演讲时，阻止这些抗议活动冲击国家的国会大厦。
+爆料革命和新中国联邦创始人郭文贵先生近日指出，俄乌局势的走向取决于美国和欧洲的态度是否足够强硬，尤其是美国的态度和决策。如果普京看出拜登政府态度软弱，那他就不仅仅只是拿下乌克兰那么简单，接下来还会进一步拿下欧洲。而与此同时，中共有极大可能会趁机对台湾发起武装攻击。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2039.png)一个被称为“人民车队“的新卡车司机抗议活动将于周三从加州巴斯托出发，前往华盛顿特区。
+如果中俄分别对乌克兰和台湾开战，那么世界将陷入战争的灾难，政治格局也将被彻底打破，美国将会失去其全球领导地位。 “白头鹰”会被“双头鹰”咬死吗？考验美国的时候到了。
 
-在演讲之前，美国一直在放松口罩要求和疫苗接种强制令，而且随着2022年中期选举的到来，民调显示美国人越来越不关心中共病毒威胁，而更担心经济、通货膨胀和税收问题以及教育问题。
+新闻链接：
 
-至少有四个蓝州已经结束了对学校的口罩规定，白宫谴责了疾病控制和预防中心（CDC）关于室内口罩的指导方针。
-
-素材链接：[dailymail.co.uk][Capitol perimeter fence erected after January 6 riot will be REINSTALLED ahead of Biden’s State of the Union address on March 1 as the truckers’ Freedom Convoy heads for Washington](https://www.dailymail.co.uk/news/article-10533055/Capitol-fence-reinstalled-ahead-Bidens-State-Union-trucker-convoy-heads-DC.html)
+[https://www.voachinese.com/a/us-congress-reax-russia-putin-ukraine-20220221/6453362.html?utm\_source=twitter&utm\_medium=social&utm\_campaign=dlvr.it](https://www.voachinese.com/a/us-congress-reax-russia-putin-ukraine-20220221/6453362.html?utm_source=twitter&amp;utm_medium=social&amp;utm_campaign=dlvr.it)
 
 * * *
 
-*审核：文乐
-校对：小东
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-6.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
