--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,19 +1,56 @@
 ---
-title: 中共《社会保险基金行政监督办法》发布
+title: 【TopNews】新西兰病例数爆炸式增加时期即将发现“低技能”工人的真正价值
 ---
-`儒为` [轉載自GNews](https://gnews.org/zh-hans/2046910/)
+`topnews` [轉載自GNews](https://gnews.org/zh-hans/2046945/)
 
-作者：意大利罗马达芬奇农场-儒为
-![](https://assets.gnews.org/wp-content/uploads/2022/02/保险运动.jpeg)封面来源：网络图片
-中共打着“为提升监督效力、更好保障基金安全”的名义，中共人力资源和社会保障部2022年2月22日发布《社会保险基金行政监督办法》，自3月18日起施行。人社部表示，下一步，将指导各地抓好办法的贯彻落实，强化监督查处，以零容忍态度严厉打击欺诈骗保、套保或挪用贪占社保基金的违法行为；同时开展全险种社保基金专项检查，发现一起、查处一起，努力守护好社保基金安全。
+随着疫情持续扩散、病例数爆炸式增加，新西兰将有大量的所谓“低技能”劳动者感染或被迫隔离。
 
-七哥在直播中说，中共国银行就是谋你钱的机器，中共国保险公司就是害你命的机器。中共盗国贼集团把银行里和保险公司里数以万亿计的财富以各种我们无法想象的方式搬到海外藏起来，中共国盗国贼集团再以各种理由和借口宣传各种亏空和各种腐败来替自己找替罪羊，抓一批、杀一批，最后不了了之。各种问题和矛盾积累到一起到了无法解决的程度，那么中共就发动一场运动或者一场战争来解决这一切问题。中共是这样，世界也是这样。
+NZ Herald商业编辑、专栏作家Damien Venuto发文称《新西兰即将发现“低技能”工人的真正价值》。
+![图片](https://mmbiz.qpic.cn/mmbiz_jpg/KtRNQQrEUGmNU7KYdrWHw12Uw4yz5vwtyJqoxb3RqXFqkhmfricic3F6icwISKzVsg7p8hIHKdqr7zndp2UeOxiaGQ/640?wx_fmt=jpeg&amp;wxfrom=5&amp;wx_lazy=1&amp;wx_co=1)
 
-中共《社会保险基金行政监督办法》发布，说明中共就是要通过这场“保险运动”尽快对即将崩塌的金融行业进行独裁管制，之后再亲自把这个巨大的金融泡沫戳破，把该抢回来的财富抢回来、把该甩的锅甩出去，最后再给能在病毒和疫苗灾难中活下来的老百姓一点甜头，这样中共就认为可以再继续活下去了。中共国保险业是巨大的金融泡沫最重要的那张多米诺骨牌，中共自曝保险业也仅是中共国经济崩塌的开始。
+（图片：网页截图）
 
-新闻来源：🔗[权威快报｜打击骗保套保!《社会保险基金行政监督办法》发布](http://www.news.cn/politics/2022-02/22/c_1128405113.htm)
 
-*编辑/校对/发稿：意大利罗马达芬奇农场-儒为*
+
+随着这种高传播性毒株在新西兰肆虐，这些工人将被迫在家隔离，更糟糕的是，他们的工作无法在家完成。
+
+“我们已经得到警告，在疫情爆发的高峰期，可能会有多达35万名新西兰人同时在家隔离。”
+
+文章称，上周的数学模型显示，在疫情持续三到四个月的情况下，预计总共会感染150万人，包括386,400例病例、11,500例住院和460例死亡。
+
+很多行业已经做好准备，譬如奥克兰机场就计划损失四分之一的劳动力，超市公司Foodstuffs预计这一数字将接近30%。葡萄酒行业警告，今年的收成面临巨大挑战。
+
+Venuto写道：
+
+“我们很快就会看到被政客们贬低为‘低技能’的工人们的真正经济价值。”
+
+随着疫情大面积爆发，各行业员工缺勤将对新西兰经济造成严重影响。
+
+新西兰Footprint Connect和Umbrella Wellbeing两家公司本月发布的一份白皮书指出，数据表明，2020年新西兰经济因工人缺勤损失了18.5亿纽币，平均每个工人缺勤4.2天/年。随着Omicron笼罩新西兰全国，可以预计未来几个月新西兰工人生产力的损失将是巨大的。
+
+随着大量的一线工人在未来几周将被感染、因密接在家隔离或需要照顾染病的家人，我们面对的将是空货架、无人配送的包裹以及烂在树枝上的水果。![图片](https://mmbiz.qpic.cn/mmbiz_jpg/KtRNQQrEUGmNU7KYdrWHw12Uw4yz5vwtgwuWnm26VSYboLmMmTibKibqAw01Nk1BTLHU4oJrbuDUtd1OtobhLzXQ/640?wx_fmt=jpeg&amp;wxfrom=5&amp;wx_lazy=1&amp;wx_co=1)
+
+Photo: RNZ / Claire Eastham-Farrelly
+
+很显然，称呼这些工作人员为“低技能”是不合适的。有政界人士和专家呼吁将他们称为“低工资”工人，因为事实就是如此。
+
+在去年的预算前演讲中，总理阿德恩称新西兰移民法即将调整，将使政府“将吸引高技能而不是低技能移民”。
+
+“对于一个用词如此谨慎的政府来说，贬低数十万新西兰人的日常工作是多么轻而易举。”Venuto说。
+
+低薪工作是不一定令人愉快的工作，存在感不强。只有当它突然消失，外界才会注意到。就像空气和水。“这正是未来几个月将会看到的。”
+
+我们即将进行一项实验，看看当这些没有人喜欢做的工作突然消失了，会发生什么。
+
+[援引链接：](https://www.nzherald.co.nz/business/damien-venuto-new-zealand-about-to-find-out-the-real-value-of-low-skilled-workers/WZZ5E55HCKQE6TFL6TOIE2QPR4/)
+
+撰稿/米拉雅
+
+审阅/邱杰斯
+
+上传/天赐良闻
+
+
 
  
 
