--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,29 +1,25 @@
 ---
-title: 秘翻在线：绑架中共国人抽血和器官买卖…惊现血奴
+title: 国际｜美、英、日、欧盟等国拟对俄祭出一系列严厉制裁
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2047080/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/2047088/)
 
-撰稿：潜水的鲸
-![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-30.png)图片来源：原文链接
-先驱经济金有珍记者报道：因为连续发生以高工资为诱饵，诱骗中共国人到柬埔寨摘除脏器的案例，中共当局发布了柬埔寨就业警告。
+**撰文/ 港台前线｜发布日期/ 22/02/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/美、英、日、歐盟等國擬對俄祭出一系列嚴厲制裁-.jpg)
+**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)**
 
-据《观察者网》等中共媒体18日报道，被柬埔寨网络诈骗团伙绑架，在囚禁状态下被抽血的中共国男子李某（31岁）逃出，目前正在当地医院接受治疗。
+俄罗斯总统普京承认乌克兰东部两大亲俄区域独立，并下令派军进驻后，美国总统拜登最先宣布制裁乌东两地。
 
-李某去年6月经朋友介绍说可以保障高工资后前往广西，喝了不明身份的人递来的饮料后昏迷不醒，经由越南被绑架到了柬埔寨的西哈努克维尔。
+拜登21日深夜签署行政令，禁止美国人在自称为顿涅茨克人民共和国及卢甘斯克人民共和国的乌东地区进行新投资、贸易及融资。白宫发言人普萨基强调，针对俄罗斯的制裁会陆续有来，期望俄罗斯当局拭目以待。
 
-之后，绑架组织要求李某参与网络诈骗，因李某拒绝，绑架组织监禁了李某，并从去年8月开始对他进行了7次抽血，每次抽1500毫升血液贩卖。他趁监视疏忽之际奇迹逃脱。
+日本首相岸田文雄亦于今日（22日）较早时间表示，日本不会接受任何违反国际法的行为，已准备好联同美国及其余七大工业国成员一同制裁俄罗斯。
 
-李某证实说:诈骗团伙威胁他，说要把他的器官也摘除售卖，曾在一起的一名中共国人被抽血、脏器被摘除后第二天就消失了。
+另外，欧盟委员会主席冯德莱恩及欧洲理事会主席米歇尔在联合声明中也斥责俄罗斯入侵乌克兰的行为，违反了国际法，并承诺欧盟将会以制裁的方式对付是次违法行为的参与者。
 
-中共国最近接连发生了多起像李某一样因找工作而在柬埔寨被害的事件。 20多岁的中共国女性王某也于2020年12月前往柬埔寨后失踪。
+**不过，最值得关注的还是英国，自前苏联1991年解体后，英国成为俄罗斯超级富豪转移资产及移民热门地点，伦敦蓬勃金融市场亦为俄企吸纳外来资金首选，相信英国的制裁将对俄罗斯的特权阶级造成最大影响。**
 
-王某的母亲在上个月13日和女儿失去联系，14日收到了”你女儿被绑架了，汇20万元人民币”的微信短信。和王某同行的中国工人2名失踪后被发现已死亡，但王某至今下落不明。
+**英国首相约翰逊早前表示，当局就俄乌局势进行了紧急会议，并就针对俄罗斯的“一揽子制裁”已达成共识，预计将在伦敦时间22日中午宣布对俄的经济制裁，同时，约翰逊强调，此次严厉措施只属首轮制裁，随着俄方行动升级制裁力度亦将随之加码，不排除将覆盖俄罗斯及各地的寡头巨富。**
 
-信息来源：[http://news.heraldcorp.com/view.php?ud=20220218000546](http://news.heraldcorp.com/view.php?ud=20220218000546)
-
-评：如果中共国能保证基本的民生和就业问题，没有人愿意背井离乡去找所谓高工资的工作。该事件暴露了中共国的国民生存状态之艰难。
-
-责编：待命（文晓）
+来源｜[路透社](https://www.reuters.com/world/uk/uk-says-russian-invasion-ukraine-has-begun-2022-02-22/)
 
  
 
