--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,65 +1,30 @@
 ---
-title: 普京承认乌克兰分裂地区后俄罗斯面临新制裁
+title: 独裁与垄断是万恶之源
 ---
-`Shuizhuyu` [轉載自GNews](https://gnews.org/zh-hans/2046905/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2046936/)
 
-翻译/整理： 意大利罗马达芬奇农场  Shuizhuyu
+撰搞：友情友义
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-26.jpg)图片来自网络
+邪恶的体制，在政治上表现为独裁，在经济上表现为垄断。近代，从希特勒到斯大林再到毛泽东，今天，从中共国到北朝鲜再到塔利班，对人民奉行的都是强权统治和残酷压榨的邪恶政策。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/HACIPNF4YNL5DHXAV2WQPGE5WA.jpg)
+**         **自前苏联解体，中国宣布改革开放以后，为了打开中国的市场，西方各国给予了中国在政策、金融和技术方面前所未有的帮助。但万万没想到的是，这样做的后果只是让共产党独裁体制的僵尸重新复活，并把共产主义的毒素注入了西方的政治、经济、科技和文化等各个领域，直至用病毒武器把全世界推入了万劫不复的境地。
+
+**          **国际垄断资本的本性是贪婪，为了利益他们会毫不犹豫的打破人性的底线与魔鬼做交易。让人吃惊的是，**CCP**病毒武器的制造技术竟然是由美国人帮助开发和资助的，而就在这人类的生死关头，那些跨国资本控制的媒体，一直在制造假信息，打压传播病毒、疫苗真相的声音。
+
+更有甚者，西方各国政府，不去病毒溯源，而是与垄断资本控制的药企勾结，别有用心的用行政命令、限制自由、强迫失业、冻结银行账户、强迫退学等手段逼迫人民注射毒疫苗，致使半数以上的地球人口生灵涂炭。
+
+**         **每个政客的心里都潜伏着一个魔鬼，就是独裁，毎一个寡头的心里都隐藏着一个妖怪，就是垄断，当民主与法制因某种原因被削弱时，这些妖魔鬼怪就会跳出来作恶。
+
+面对大众反对强制疫苗的抗议运动，欧洲各国政府居然效法**CCP**，调用警察暴力镇压，再现了**2019**香港民众被港府镇压的场景。大媒体本应该是真实、正义代言人,但在垄断资本的控制下，主流媒体对真实的声音封网禁言,打压真相,制造假信息做尽了坏事，成了魔鬼的罪恶帮凶。本应是以治病救人为天职的大药企，也为了巨额的利益而与各国政要合谋，变成了制造杀人疫苗的机器。
+
+**        **垄断资本可以提供维持独裁体制所需的金钱，而独裁政府又可以保护寡头的垄断地位，富可敌国的金融巨头们也可以根据需要而推出自己的强权代言人。这一对妖魔因相互需求而缠绕在一起，贪婪的吞噬着人类的生命和全球的财富，只要它们存在一天，世界就永无宁日。
+
+世界大变革在即，让我们放弃幻想，高举新中国联邦的旗帜，紧跟着爆料革命的发起人郭文贵先生，大声唤醒世界人民，从地球上彻底铲除邪恶的独裁和垄断，让人类社会得以正常的生存和发展。
 
 
-资料来源：路透社
 
-在总统弗拉基米尔·普京承认乌克兰东部的两个分离地区之后，美国及其欧洲盟友将于周二宣布对俄罗斯实施新的制裁，这加深了西方对欧洲新战争的担忧。
-
-乌克兰军方表示，由于违反停火协议的行为增加，过去 24 小时内，东部地区的亲俄分裂分子在炮击中造成 2 名士兵死亡和 12 人受伤，这是今年伤亡人数最多的一次。
-
-普京周一的声明，并签署了一项关于向两个分离地区部署俄罗斯军队的法令，引起了国际社会的谴责和美国的立即制裁，总统乔·拜登签署了一项行政命令，以停止美国在分离地区的商业活动。
-
-周二，对战争的担忧升温将油价推至七年高位，而包括日元在内的避险货币上涨，全球股市暴跌。
-
-周一晚些时候，美国驻联合国大使琳达·托马斯-格林菲尔德在安理会紧急会议后对记者说：“美国将对俄罗斯实施制裁，这是明显违反国际法和乌克兰主权和领土完整的行为。我们能够、将要并且必须团结一致，呼吁俄罗斯撤军，重返外交谈判桌，为和平而努力。”
-
-但一位美国高级官员表示，俄罗斯军队部署到分离地区并不值得美国及其盟国为全面入侵而准备的最严厉制裁，因为俄罗斯已经在那里部署了军队。
-
-一位英国政府高级部长表示，很明显普京选择了对抗而不是对话，英国将以制裁作为回应。
-
-现在的情况与 1962 年古巴导弹危机一样严重，当时美国和苏联之间的对抗将世界推向了核战争的边缘。
-
-俄罗斯否认计划袭击其邻国，但它已在乌克兰边境集结军队，并威胁要采取“军事技术”行动，除非它得到全面的安全保证，包括乌克兰永远不会加入北约。
-
-据塔斯社报道，俄罗斯外交部发言人玛丽亚·扎哈罗娃（Maria Zakharova）表示，对这两个地区的承认并未影响俄罗斯准备与美国进行会谈的准备。
-
-英国表示已制定制裁措施，针对那些参与侵犯乌克兰领土完整的人，这些措施将于周二生效。
-
-一名欧盟外交官分别表示，会议将考虑如何就欧盟领导人周一发表的声明采取行动，该声明称欧盟将“对参与这一非法行为的人实施制裁”。
-
-中国表示对局势恶化感到担忧，并呼吁各方保持克制，而日本则表示，如果发生全面入侵，它准备加入对莫斯科的国际制裁。
-
-俄罗斯驻联合国大使瓦西里·内边齐亚警告西方大国要“三思而后行”，不要让局势恶化。
-
-路透社的一名目击者看到坦克和其他军事装备穿过分离主义控制的顿涅茨克市。车辆上看不到任何标志。
-
-乌克兰军方在其 Facebook 页面上表示，它记录了 84 起分离主义分子的炮击事件，据称这些分离主义分子违反停火协议，用重炮向前线的约 40 个定居点开火。
-
-国际文传电讯社援引一名分离主义官员的话说，乌克兰破坏分子在一条道路上引爆了一枚地雷，造成三名平民死亡。
-
-俄罗斯支持的乌克兰顿涅茨克和卢甘斯克地区（统称为顿巴斯）的分离主义分子于 2014 年脱离了乌克兰政府的控制，并宣布自己为独立的“人民共和国”。
-
-RIA 通讯社援引外交部的报道称，俄罗斯需要先批准与这些地区的友好条约，然后才能讨论这些地区的确切边界等问题。预计俄罗斯议会将于周二审查友好条约。
-
-周一，在充满对西方不满的冗长电视讲话中，明显愤怒的普京表示，乌克兰东部是古老的俄罗斯土地。普京对奥斯曼帝国的历史进行了深入研究，并对俄罗斯要求改写欧洲安全安排的要求一再遭到拒绝表示失望。
-
-普京说：“我认为有必要做出早就应该做出的决定，立即承认顿涅茨克人民共和国和卢甘斯克人民共和国的独立和主权。”
-
-普京多年来一直致力于恢复俄罗斯对苏联解体后出现的国家的影响力，乌克兰在他的野心中占有重要地位。 2014年俄罗斯从乌克兰吞并克里米亚，西方国家对俄罗斯实施制裁。
-
-普京讲话时，卢布扩大了跌幅，一度跌破每美元 80。
-
-🔗[普京承认乌克兰分裂地区后俄罗斯面临新制裁](https://www.reuters.com/markets/stocks/russia-facing-new-sanctions-after-putin-recognises-breakaway-regions-2022-02-22/)
-
-责任编辑/发布： Shuizhuyu
-
+编辑：云彩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
