--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,23 +1,30 @@
 ---
-title: 俄官方支持乌克兰分裂 世界局势骤然紧张
+title: 中共国滞胀死局已经开始
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046856/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/2046871/)
 
-撰稿：东京樱花团/龟龟
-![](https://assets.gnews.org/wp-content/uploads/2022/02/02229.png)
-2月21日，俄罗斯总统普京签署行政命令，承认乌克兰境内莫斯科支持的分裂份子控制的两个地区独立。此举加剧了俄乌紧张局势，西方国家担心这可能导致二战以来欧洲最大的冲突之一。
+撰稿：铁浮图
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2252.png)图片来源于网络
+今日文贵先生所说中共国农药化肥价格猛涨，从210元涨价到270元，这就是中共国经济滞胀已经开始的信号。
 
-早些时候普京召集安全委员会开会呼吁承认顿涅茨克人民共和国和卢甘斯克人民共和国的主权。他还在电视讲话中还指责美国和北约试图将乌克兰变成一个军事哨所来威胁俄罗斯。乌克兰方面表示俄罗斯支持的分裂份子发动的炮击已经达到近三年来的最高水平。分裂份子则声称乌克兰武装部队对平民区使用了重型武器。
+中共僵化的体制和高度的集权，造就了习包子以小学博士的智力和见识统治中共国的奇葩现象。为迎冬奥会塑造假的蓝天白云，从去年四季度开始对煤炭限停限产，由此造成一系列恶性影响：
 
-对于普京这一行动白宫方面表示拜登已经下令实施新的制裁，内容包括禁止在普京承认的两个分裂地区进行新的投资，贸易和融资等。
+1. 到2020年大陆煤火发电占比例68%，虽然是掺了水的假数据，但也绝对表明煤炭短缺必定导致电力短缺，相信大陆的朋友都已经亲身体会了吧，去年四季度全国各地都在拉闸限电，大众日常生活和企业经营生产都受到严重影响；
+2. 电力短缺必定加剧工业原料减产和短缺，比如钢材、建材、化工等产品，这就进一步抬高很多行业的成本，那么下游的企业的生产投资积极性就降低了；
+3. 很自然经济发展就减慢了，这就是滞胀中的“滞”字表现，经济停滞，很多企业不再扩大规模甚至都关停了，大众感觉就是工作难找了，生活会很艰难。
+4. 工业基础原料和电力短缺，又会影响到很多民生行业，比如蔬菜价格猛涨，还有如今天文贵先生所说的农药化肥等价格增高，另外汽柴油价格也会涨价，运输成本太高又会抬高全社会的物流成本。所以大众会感受到滞胀中的“胀”，通货膨胀，也就是什么都涨就是工资不涨。
 
-另有报道称美方已经在和乌克兰政府讨论一旦俄罗斯入侵乌克兰，就让乌克兰总统泽连斯基离开首都基辅。
 
-莫斯科方面已经在乌克兰边境集结了多大19万军队，美国等警告称入侵将在几天内发生。但普京在当天会议中表示莫斯科的首要任务是确保与北约达成安全保障协议以维持和平。
+因此，滞胀的经济停滞是关键，经济停滞了生产少了，但社会需求旺盛，更多的钱对更少的商品自然通胀。解决的办法只有加速经济活跃度，营造更良好的企业发展空间，更多的社会投资建设，并实行例如减税、减少监管、减少吃拿卡要等问题，解决了“滞”的问题，“胀”的问题才好解决。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+但习包子凭“小学博士”的见识肯定认知不到这最基本的经济思路，一定会一条道跑到黑，越缺钱越大撒币，然后掠夺全社会的资源和财富，不断上演杀鸡取卵的恶行，最后中共一定崩溃，不用怀疑！
+
+目前仍在墙内的个人或者财富还在墙内的同胞，赶紧把血汗钱弄到海外换成HDO和HCN，这才是王道！
+
+新闻参考链接：[2/21/2022 文贵盖特](https://www.gettr.com/post/pw20380abb)
+
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
