--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,21 +1,21 @@
 ---
-title: 日本民众已觉醒，抵触接种中共疫苗第三针
+title: 俄官方支持乌克兰分裂 世界局势骤然紧张
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046854/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046856/)
 
-撰稿：东京樱花团/风翼
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2034.png)图片来源于网络
-据经济新闻报道：根据帝国数据库的“关于公司对第三类疫苗的态度的调查问卷”得出结论。
+撰稿：东京樱花团/龟龟
+![](https://assets.gnews.org/wp-content/uploads/2022/02/02229.png)
+2月21日，俄罗斯总统普京签署行政命令，承认乌克兰境内莫斯科支持的分裂份子控制的两个地区独立。此举加剧了俄乌紧张局势，西方国家担心这可能导致二战以来欧洲最大的冲突之一。
 
-中共病毒（新冠病毒COVID-19）疫苗的第三剂加强剂接种速度和第二次接种速度相比，有相当大的推迟，其原因是对疫苗效果的怀疑和政府所做的反应怀有极大的不信任感。
+早些时候普京召集安全委员会开会呼吁承认顿涅茨克人民共和国和卢甘斯克人民共和国的主权。他还在电视讲话中还指责美国和北约试图将乌克兰变成一个军事哨所来威胁俄罗斯。乌克兰方面表示俄罗斯支持的分裂份子发动的炮击已经达到近三年来的最高水平。分裂份子则声称乌克兰武装部队对平民区使用了重型武器。
 
-特别是企业在第二次接种前都积极参与了工作场所的疫苗接种相比，对于这次强化接种，企业对直接向员工推荐工作场所的疫苗接种持谨慎态度，只有20%的企业实施或考虑在工作场所接种疫苗。其原因表示，企业虽花费大量资金精力，但在预防感染上效果甚微，并伴有许多不良反应症状，政府方面对于事故和后遗症的方面也没有采取积极对应。
+对于普京这一行动白宫方面表示拜登已经下令实施新的制裁，内容包括禁止在普京承认的两个分裂地区进行新的投资，贸易和融资等。
 
-中小型公司表示，考虑因接种产生的不良反应政府所采取的消极对应态度（即使出现副作用或后遗症，政府也将接种疫苗视为个人责任）和一定数量的员工不愿意接种疫苗的情况下，将不再进行工作场所接种。从对疫苗本身的效能、不良反应、后遗症和政府的消极反应来看，不得不说民众越来越不信任政府并抵触接种中共病毒疫苗。
+另有报道称美方已经在和乌克兰政府讨论一旦俄罗斯入侵乌克兰，就让乌克兰总统泽连斯基离开首都基辅。
 
-信息来源：[3回目ワクチン、「副反応・後遺症の責任取れない」、職域接種2割のみ。各自で判断を推奨](https://gunosy.com/articles/eNl1L?s=s)
+莫斯科方面已经在乌克兰边境集结了多大19万军队，美国等警告称入侵将在几天内发生。但普京在当天会议中表示莫斯科的首要任务是确保与北约达成安全保障协议以维持和平。
 
-*编辑：东京樱花团/知了知了
+*编辑：东京樱花团/喜马拉雅的微尘
 发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
