--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,27 +1,29 @@
 ---
-title: 男子第三针后突感不适，最后死于心脏骤停
+title: 普京承认乌克兰叛乱分子的做法提高了危机的难度
 ---
-`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2047003/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2047038/)
 
-#### 翻译                  意大利达芬奇农场                 小白鸽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Schermata-2022-02-22-alle-09.24.07.png)图片来源：eventiavversinews.it
-意大利巴里一名55岁男子在急诊室死亡后， 检察官已开始对其死亡展开过失杀人罪调查。
+编译：花岗岩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-332.jpg)
+图片来源：网络截图
 
-2月15日这位男子因为心脏跳动加快由118救护车送到医院的急救中心。自打了第三针以后，他感到腿部有问题。15年前，他曾接受过肝移植，所以他担心疫苗会给他的身体健康带来问题。
+据美联社莫斯科2月22日报道，俄罗斯总统弗拉基米尔·普京（Vladimir Putin）周一迅速采取行动，承认乌克兰东部分离主义地区的独立，在西方担心俄罗斯入侵乌克兰的情况下，通过一系列全国性的电视讲话来展示他对西方的蔑视。西方称其为莫斯科一场快速发展的政治戏剧，是多年来精心策划的政治声明。
 
-他的家人指控时说：“ 疼痛使他起不了床。我们叫了救护车，做了心电图以后，他被送到了急救中心。他是10点被送到的， 下午四点才给他验血。那时， 他想去卫生间，但没人陪他去。”
+在乌克兰分离主义 “人民共和国 ”的亲俄领导人在俄罗斯电视台上恳求普京承认他们是独立国家之后，普京周一主持了克里姆林宫会议，会上一众俄罗斯高级官员都支持这一举措。几个小时后，普京向全国发表了长达一个小时的电视讲话，然后电视上显示他签署了承认法令。
 
-这位55岁男子随后给妻子打电话，妻子接到丈夫的电话后马上赶到医院，但是这时丈夫却不接电话。
+在承认反叛地区的同时，超过15万名俄罗斯军队从三面包围了乌克兰，美国及其盟友认为这是一个即将入侵的迹象。美国警告说，莫斯科可能试图通过在动荡的叛军东部进行虚假的袭击或其他类似行动来为攻击乌克兰创造借口。
 
-“这位男子的儿子也来到急救中心， 一位患者告诉他医生正在抢救其父亲”，这一事实后被一护士所证实。据了解，他是一个人去的卫生间，由于某种还待核实的原因，导致心脏骤停，随后死亡。
+周四，乌克兰军队与俄罗斯支持的分离主义分子之间的接触线上的紧张局势激增，这场冲突于2014年爆发，已造成超过14,000人死亡。叛乱分子指控说，小规模冲突的急剧增加预示着乌克兰打算用武力夺回对该地区的控制。乌克兰当局拒绝接受任何这样的意图，说他们没有对增加的炮击作出回应，并指责叛军进行挑衅。
 
-出于愤怒，这位55岁的儿子一拳打在门上， 导致医务人员打电话叫来宪兵。受害者的家人决定提出申诉，并要求进行尸检。
+在一连串快速发展的事件中，叛军领导人在周五播出的一段视频中宣布大规模撤离，但根据视频中嵌入的数据，该视频是两天前录制的，这是一个预先安排好的阴谋的迹象。他们接着在周一要求普京承认他们地区的独立，为克里姆林宫的政治表演创造条件。
 
-值班检察官卡埃塔诺•迪•巴利(Gaetano Di Bari) 将在2月21日将此案授权给法医布林迪西•利亚娜•尹纳莫拉多(Brindisi Liliana Innamorato)。
+在签字仪式前向全国发表的长篇大论中，普京将乌克兰加入北约的申请描述为对俄罗斯的生存威胁，对西方关于该联盟不威胁俄罗斯的保证置若罔闻。他将美国即将在乌克兰部署的导弹描述为“架在我们脖子上的刀子”，说它们将能够在短短4-5分钟内到达莫斯科。
 
-原文链接：[https://www.eventiavversinews.it/bari-ha-un-malore-dopo-la-terza-dose-e-viene-lasciato-sei-ore-in-attesa-in-ambulanza-muore-per-arresto-cardiaco-nel-bagno-del-policlinico/](https://www.eventiavversinews.it/bari-ha-un-malore-dopo-la-terza-dose-e-viene-lasciato-sei-ore-in-attesa-in-ambulanza-muore-per-arresto-cardiaco-nel-bagno-del-policlinico/)
+俄罗斯总统在讲话中花了很大篇幅诋毁乌克兰，并试图使这个国家失去合法性，认为它是苏联共产主义统治者的产物。他讽刺地说，乌克兰可以用苏联创始人列宁的名字来命名，他把俄罗斯的大片历史土地交给了乌克兰。
 
-编辑、上传： Xiao  baige
+普京嘲笑乌克兰的“非共产化 ”运动，该运动摧毁了列宁的纪念碑。他说：“我们已经准备好向你们展示真正的非共产化对乌克兰意味着什么，”普京在一个严厉的警告中说，这似乎反映了一种威胁，即收回他认为在1991年苏联解体时从俄罗斯 “抢走 ”的土地。
+
+新闻来源：[Putin’s recognition of Ukraine’s rebels ups ante in crisis](https://apnews.com/article/russia-ukraine-europe-russia-vladimir-putin-moscow-07b1cbe7969f2e8cac3cf82778eacb95)
 
  
 
