--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,7 +1,7 @@
 ---
-title: 20220220文贵大直播：新中国联邦反洗脑首先以教育入手
+title: 20220220文贵大直播：金融布瓦吉吉事件会从音乐界开始
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2046988/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2046989/)
 
 作者：东京樱花团视频小组
 
