--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: GEDU教育欢迎报名
+title: 习和普京的政治联盟
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2047965/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2048016/)
 
 台灣寶島農場
 
