--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 普京到底在打什么主意
+title: 新中国联邦GEDU的高度
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2047728/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2047767/)
 
 台灣寶島農場
 
