--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 新中国联邦GEDU的高度
+title: 共产党企图奴役全世界
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2047767/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2047825/)
 
 台灣寶島農場
 
