--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: GEDU教育欢迎报名
+title: 冬奥后 金融界的崩塌将从音乐界开始
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2047965/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2048084/)
 
 台灣寶島農場
 
