--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,160 +1,33 @@
 ---
-title: 打不开的锁
+title: 疫情次生灾难给英格兰人带来心理健康问题
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2053052/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2053214/)
 
-作者：香草山健身部 — 新世界的一员
+作者：台灣寶島農場 – 尋文客
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+当地时间2月21日，据相关媒体消息显示，英格兰的卫生官员警告称，由于当地在中共病毒疫情中实行的封锁措施，英格兰预计有一千万人，包括150万儿童和青少年将因此遭受精神健康问题的困扰。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-30.jpg)
+研究人员指出，自中共病毒开始以来，当地因心理健康问题而需要紧急治疗的儿童人数增加了52%，同期患有饮食失调的18岁以下儿童也增加了72%。另外，英格兰有160万人正在等待接受心理健康方面的专业治疗，其余还有八百万需要专业治疗的患者尚未进入等待名单。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/logo-5-768x103-3.jpg)
+对此，分析人员表示，中共病毒疫情的封锁措施已经对大量英格兰人民的精神健康造成了不利的影响，同时，大量患者的积压已经让英格兰部分地区的精神健康专家不堪重负。至于许多缺乏足够护理的患者，他们的未来也令人担忧。
 
+目前，英格兰的卫生官员已经将当地民众精神健康问题的现状称为“第二次大流行”。
 
+参考链接：[‘Second Pandemic’ – 10 Million Britons Need Mental Health Care After Lockdowns](https://www.breitbart.com/europe/2022/02/21/second-pandemic-10-million-britons-in-need-mental-health-treatment/)
 
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
 
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image0-1-2.png)
-
-大哥，
-
-世界不要我了，
-
-他们是一窝子强奸犯，
-
-我是个妓女一样，
-
-他们会让我回家吗？
-
-脖子上锁的铁链女这样的说。
-
-搅动了全球好心人的的心，
-
-悲叹初蕊的蓓蕾豆蔻的年华，
-
-跌落在人间炼狱受尽了凌辱。
-
-口齿清晰的她没有疯，
-
-只是被折磨的、无望而恍惚，
-
-可是封县上下领导都说她疯了，
-
-举国悲愤结伴同寻真相，
-
-要抗争这黑暗的世道，
-
-“好心”的医生关住了她，给她看“病”
-
-不容许人们接近、探望，
-
-可怜的女人哀求着，放我出去吧，
-
-穿白大褂的人群说，你睡吧睡吧，
-
-睡着就好了，
-
-是啊，睡着就自由了，
-
-清醒的你那能得自由呢，
-
-你身上有太多他们种下罪恶的痕迹，
-
-你是个活证呀
-
-是不知多少个罪人的活证，
-
-是掉一连串乌纱帽的活证，
-
-你那能够得自由，而且是清醒着的自由，
-
-好不容易脱去铁锁的女人呀
-
-连你住过的村子都被封了
-
-想拯救你的好人都被抓了、关了，
-
-你说你还能有自由吗？
-
-可怜的女人，到那里都是注定被关着的，
-
-因为统治这片土地的恶源还在，
-
-炮制这些悲剧的他们还坐在制高点，
-
-你的锁就无法解开，
-
-因为他们都是一样的强奸犯，
-
-你的链子得不到挣脱，
-
-畜生强奸的是你的人，
-
-孙子强奸的是你的灵魂呀，
-
-悲惨的人，
-
-你能越过山路崎岖，
-
-你也越不过层层蛛网。
-
-浊浪滔滔无处有清流，
-
-这个世界早已经没有了良知，
-
-这个世界早丢失了人理，
-
-你声泪俱下撼不动红魔的心，
-
-因为它的心是黑的、是丑陋的。
-
-它的本质就是罪恶的，
-
-普天之下 莫非王土，
-
-这一把冰冷刺骨的锁去哪里打开，
-
-罪恶滋生的土壤无处觅公理，
-
-呻吟着的灵魂，渴望暴风雨的洗礼，
-
-恢复的良知需要雨露的滋润，
-
-几十年来第一次全国进入寻找真相，
-
-迷失的灵魂在摸索回家的路，
-
-这一刻人们知道了自由和尊严的重要，
-
-这一刻人们明白了苟活也没有活路，
-
-受尽蹂躏的人们呀，何时知道该奋起反抗，
-
-挣扎这罪恶滔天，冰冷无情的五星血链！
-
-（本文仅代表作者个人观点）
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-7.jpg)
-
-*编辑 /校对*：*Yuki*jiang
-
-*发稿：Yuki*jiang
+总编: Irene木木
+编辑: 谐趣园/静言 
+校正/发稿：Fei797
 
 **更多资讯，更多关注**
-
 [**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
-
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
-
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-
-
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
