--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,26 +1,24 @@
 ---
-title: 乌克兰宣布进入紧急状态 开始征召预备役
+title: 香港因奥密克戎疫情熔断八国航班
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2052934/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2053088/)
 
-撰稿：东京樱花团/百花李香
+撰稿：东京樱花团｜Garrettw
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰宣布进入紧急状态-开始征召预备役.jpg)[图片来源](https://www.ukrgate.com/eng/?p=8741)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/香港因奥密克戎疫情熔断八国航班.png)[*图片来源*](https://images.7news.com.au/publication/C-5197408/29e45076be47f9612aa2dfc8490158a8a226b71a.jpg?imwidth=828&amp;impolicy=sevennews_v2)
 
-因俄罗斯在21日承认该国东部亲俄控制地区的独立，其它地区遭受入侵的威胁日趋严重，乌克兰国家安全和国防委员会23日决定宣布进入紧急状态。紧急状态将在议会批准后正式宣布。
+在中共病毒（Covid-19）奥密克戎（Omicron）疫情爆发后，香港已禁止来自八个国家航班，包括澳大利亚、加拿大、法国、印度、巴基斯坦、菲律宾、英国和美国。香港特区政府2月23日公布，将延长这些国家实施的地区性航班“熔断机制”至4月20日。
 
-紧急状态将持续30天，并可延长。该声明已经在亲俄派活跃的东部两个省份发布，其它地区也受此声明的约束。除此之外，议会还在审议一项允许公民携带武器的法案。
+由于对当地奥密克戎传播的担忧不断增加，林郑月娥星期二说，恢复该市与中国大陆之间的正常旅行“必须再等一段时间”。
 
-泽连斯基总统22日发表讲话称，他已下达了征召令。23日乌克兰武装部队开始征召18至60岁的公民做预备役。
+飞行禁令是在香港的奥密克戎在飞行人员中爆发后发布的，行政长官林郑月娥星期三告诉记者：“来自这些国家的客运航班将不允许在香港降落，在这些国家停留过的个人不允许登上飞往香港的航班，包括过境航班。”
 
-此外，外交部长库莱巴23日在推特上发文，他呼吁合作伙伴对俄罗斯实施更多制裁，以阻止进一步的攻击。对美国和欧洲昨天做出制裁的决定表示感谢，称已经迈出了决定性的第一步。
+香港当局已经出台了一些其他限制措施以打击中共病毒在这个城市的传播，这些限制措施包括取消大型公共活动和关闭15种不同类型的服务业，包括酒吧、健身房、夜总会和美容院。
 
-乌克兰外交部在23日的声明中敦促，在俄罗斯的所有乌克兰公民要立即离开该国。
+消息来源：[**Hong Kong bans flights from eight countries, including Australia, amid Omicron outbreak**](https://7news.com.au/news/world/hong-kong-bans-flights-from-eight-countries-including-australia-amid-omicron-outbreak-c-5197408)
 
-信息源：[非常事態宣言発令へ　予備役の招集開始　ウクライナ](text=)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 老黑*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
