--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,23 +1,22 @@
 ---
-title: 华盛顿特区国民卫队调集卡车拖车以对付即将到来的抗议
+title: 视频｜中共决定制裁向台湾军售的美军工企业
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2052601/)
+`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2052820/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3-77.jpg)
-图片来源： news.ifeng.com
+制作：香草山视频部
 
-零对冲网2月22日报道，华盛顿地区国民卫队正紧锣密鼓地准备应对下周二将要来临的卡车司机抗议，预计约有1000卡车司机以“为人民护航”的主题将去首都华盛顿抗议新冠强制措施。
+**2月21日，中共外交部发言人汪文斌在例行记者会上宣称，美国向台湾地区出售武器，严重违反一个中国的原则和中美联合公报817公报的规定，严重损害中国主权、中美关系和台海和平稳定，称中共政府决定对长期参与美国向台湾地区出售武器的美国军工企业——雷神技术公司和洛克希德·马丁公司——的行为实施反制。**
 
-据布赖特巴特新闻网获得的信息说，华盛顿特区国民卫队将从今天开始扎营，相当于“占领一个地区”，直到3月7日，福克斯新闻周二早些时候报道说国民卫队收集了大量的重型卡车拖车以防止卡车阻塞道路。
+**据悉，美国国务院2月7日批准了一项对台出售1亿美元的爱国者系统的计划，这是拜登政府执政以来第二次批准对台军售计划。**
 
-上周五，美国首都警察说他们一直与多个单位包括国民卫队共同合作，以应对即将到来的抗议活动，可能会在城市内部放上护栏，但目前还没有最后确定。
+**中共也不是第一次叫嚣对美国企业实施制裁了，2020年10月，中共就曾声称对雷神、波音等公司进行制裁。不过，有观察人士指出，始终没有看到有数据资料显示所谓“中共制裁”对美国企业产生何种影响。这种虚张声势的“制裁”恐怕最终只能沦为全球的笑柄。**
 
-##### 新闻来源： [DC National Guard ‘Scrambling’ To Secure Tow Trucks As Freedom Convoy Descends](https://www.zerohedge.com/political/dc-national-guard-scrambling-secure-tow-trucks-freedom-convoy-descends)
+发稿：小野貓（文凱琳）
 
-#  
-
-
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
 
 
