--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,33 +1,38 @@
 ---
-title: 疫情次生灾难给英格兰人带来心理健康问题
+title: DC每日热点0223
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2053214/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2053318/)
 
-作者：台灣寶島農場 – 尋文客
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-当地时间2月21日，据相关媒体消息显示，英格兰的卫生官员警告称，由于当地在中共病毒疫情中实行的封锁措施，英格兰预计有一千万人，包括150万儿童和青少年将因此遭受精神健康问题的困扰。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-30.jpg)
-研究人员指出，自中共病毒开始以来，当地因心理健康问题而需要紧急治疗的儿童人数增加了52%，同期患有饮食失调的18岁以下儿童也增加了72%。另外，英格兰有160万人正在等待接受心理健康方面的专业治疗，其余还有八百万需要专业治疗的患者尚未进入等待名单。
+编辑：楚门门
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8410F16C-3399-4758-9CA1-C4E0A54E4FDE-scaled.jpeg)
+道琼斯指数 33596.61 ▼1.42%
+纳斯达克指数 13381.52 ▼0.23%
+WTI纽约原油CFD 91.695▼0.21%
+布伦特原油CFD 93.813 ▼0.04%
+标普50指数 2,700.73▼56.31%
+美元兑人民币 1USD=6.312 RMB
+美元兑港币 1USD=7.803 HKD
+国际黄金 1901.80美元/盎司
+全球CCP病毒感染人数428,760,419例
 
-对此，分析人员表示，中共病毒疫情的封锁措施已经对大量英格兰人民的精神健康造成了不利的影响，同时，大量患者的积压已经让英格兰部分地区的精神健康专家不堪重负。至于许多缺乏足够护理的患者，他们的未来也令人担忧。
+1、 疫情危急香港推全民强检 成败或影响林郑连任
+2、美议员点名习明泽在美读研 提案禁止中共高官子女来美深造
+3、朝鲜正在利用全球对加密货币缺乏监管控制来窃取数字货币，为其核武器和导弹计划提供资金
+4、拜登宣布采取加强关键矿物质供应链的行动，终止对中共国的依赖
+5、美国总统拜登22日切断了俄罗斯政府的国际融资渠道并对两家大型银行实施制裁
+6、联合国人权专家：中共国与俄罗斯向缅甸军政府提供武器杀戮平民
+7、中共国今称拒绝将台湾与乌克兰局势相提并论
+8、超过6成台湾民众认定，北京不会在俄国入侵乌克兰之时侵占台湾
+9、欧盟将制裁俄国防部长和俄总统办公厅主任等个人和实体
+10、美国国务卿布林肯：已取消与俄罗斯外长会晤
+11、海牙国际法院审罗兴亚人种族灭绝案：今决定谁有权庭前应诉
+12、瑞信银外泄数据显示宋楚瑜曾存款1367万瑞士法郎遭宋否认
+13、日本首相岸田文雄宣布对俄罗斯的制裁措施
+14、英国制裁俄罗斯5银行3大亨 议员要求加大惩罚护台
+15、澳洲宣布首轮对俄制裁措施，确保与美国和英国等盟友对俄实施的制裁“同步”
+16、俄乌危机 德国宣布停止北溪2号天然气项目
+17、43议员致信拜登 要求他向乌派兵须获国会授权
 
-目前，英格兰的卫生官员已经将当地民众精神健康问题的现状称为“第二次大流行”。
-
-参考链接：[‘Second Pandemic’ – 10 Million Britons Need Mental Health Care After Lockdowns](https://www.breitbart.com/europe/2022/02/21/second-pandemic-10-million-britons-in-need-mental-health-treatment/)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
-
-总编: Irene木木
-编辑: 谐趣园/静言 
-校正/发稿：Fei797
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
