--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,25 +1,35 @@
 ---
-title: 香港因奥密克戎疫情熔断八国航班
+title: 3岁上小学？ 丰县女副县长遭投诉学历造假
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2053088/)
+`日本東京方舟農場` [轉載自GNews](https://gnews.org/zh-hans/2053259/)
 
-撰稿：东京樱花团｜Garrettw
+**撰稿：日本东京方舟农场 北极**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/香港因奥密克戎疫情熔断八国航班.png)[*图片来源*](https://images.7news.com.au/publication/C-5197408/29e45076be47f9612aa2dfc8490158a8a226b71a.jpg?imwidth=828&amp;impolicy=sevennews_v2)
+公益人士投诉丰县副县长刘筱婕违法造假。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片15-1.png)（图片来自大纪元）
+据大纪元2月23日报道，江苏省徐州市丰县女副县长刘筱婕遭民众投诉身份和学历双造假。
 
-在中共病毒（Covid-19）奥密克戎（Omicron）疫情爆发后，香港已禁止来自八个国家航班，包括澳大利亚、加拿大、法国、印度、巴基斯坦、菲律宾、英国和美国。香港特区政府2月23日公布，将延长这些国家实施的地区性航班“熔断机制”至4月20日。
+近日，徐州“铁链女”案件热度尚未消退，有海外的公益人士投诉丰县副县长刘筱婕身份和学历造假以及违规提拔问题。
 
-由于对当地奥密克戎传播的担忧不断增加，林郑月娥星期二说，恢复该市与中国大陆之间的正常旅行“必须再等一段时间”。
+投诉内容主要有以下两个方面：
 
-飞行禁令是在香港的奥密克戎在飞行人员中爆发后发布的，行政长官林郑月娥星期三告诉记者：“来自这些国家的客运航班将不允许在香港降落，在这些国家停留过的个人不允许登上飞往香港的航班，包括过境航班。”
+1. 刘筱婕在2020年3月未担任领导职务之前，出生年月显示为1990年1月；而担任领导职务之后，出生年月被改为1988年1月， 涉嫌身份造假。
 
-香港当局已经出台了一些其他限制措施以打击中共病毒在这个城市的传播，这些限制措施包括取消大型公共活动和关闭15种不同类型的服务业，包括酒吧、健身房、夜总会和美容院。
+2. 2020年3月25日，徐州市党建网公布的该市领导干部任职前公示显示，刘筱婕是研究生学历； 而在2009年在一篇参会论文的个人简介中显示，出生年月是1990年1月，经计算这一年她应该是19岁；同时显示刘还是中国矿业大学2009级硕士研究生。按照中共教育体系的小学、初中、高中和大学本科计算，她的入学时间是3或4岁，完全不符合常理，涉嫌学历造假。
 
-消息来源：[**Hong Kong bans flights from eight countries, including Australia, amid Omicron outbreak**](https://7news.com.au/news/world/hong-kong-bans-flights-from-eight-countries-including-australia-amid-omicron-outbreak-c-5197408)
+2月20日，温州退休法学副教授蔡钒在其公众号“高山之隼”发表了一篇题为“丰县女副县长3岁上小学，希望官方回应下！”的文章。 文章中明确指出，刘筱婕不管是1988年出生，还是1990年出生，按照我国目前的入学年龄，都是没有资格的。
 
-*校对：东京樱花团 / 東洋武士*
-*发布：东京樱花团 / 老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+另有署名王蕾的女士在蔡钒的文章后留言，她透露自己是刘筱婕在中国矿业大学的同事。她披露，以前徐州市委组织部在调查刘筱婕档案时就发现，她的身份证号码和档案里的对不上，这件事矿大好多人都知晓此事。
+
+丰县女副县长3岁上小学的消息在网上引发热议。 网民议论纷纷，“丰县真是个神奇的地方，这女副县长是拿了穿越小说大女主的剧本吧。” 、“我们这年龄可以改大，也可以改小。 一般情况不够婚龄改大，不符合职位级别，改大。 其实我们可操作性很强。” 、“呃，这个倒是真的，我县的拿手菜被你知道了。” “日后提拔，都懂…… ”
+
+参考链接：
+[https://www.epochtimes.com/b5/22/2/23/n13597953.htm](https://www.epochtimes.com/b5/22/2/23/n13597953.htm)
+
+素材采编：北极
+编辑： 老孙
+发布：Linda
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
