--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,35 +1,44 @@
 ---
-title: 第五巡回法院再审对宗教航空人员的疫苗授权
+title: 日媒斥责中共冬奥会是习和普京的政治勾兑
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2053061/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2053254/)
 
-作者：银河系农场 – 骄子
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-2月21日，据当地媒体报道，由美国第五巡回法院的三名法官构成的小组要求下级法官重新审理关于美国联合航空公司强制员工接种中共病毒疫苗的案件。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7-33.jpg)
-据悉，2021年10月，美国联合航空公司针对其六万七千名员工执行了联邦政府要求的中共病毒疫苗强制接种命令。随后，公司中那些未接种的员工要么已经被辞退，要么则是在宗教豁免下面临着无休止的无薪假期。
+作者: 日本方舟农场 Andy5
 
-为此，该公司申请宗教豁免的18名飞行员向多个地方法院提起了诉讼，要求美联航延迟执行这一不合理的疫苗接种计划。但该诉讼随即遭到地方法院的驳回。
 
-然而，本月17日，第五巡回法院裁定地方法院针对此案的审判存在错误结论，原告事实上持续因宗教信仰受到了胁迫，且该胁迫本身对原告造成了无法弥补的伤害。因此，第五巡回法院要求下级法院对该案件重新进行审理。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-45.png)
+当地时间2月18日，日媒从四个方面斥责本次中共冬奥会，就是习近平和普京上演的一场赤裸裸的政治勾兑。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-23-at-9.58.38-PM.png)图片来源: Gettr(@AndySaiKai)
+第一，普京是唯一一个在2月4日，就跟习近平会晤的国家元首。并且从下飞机到跟习近平的会晤，所有媒体拍摄到的影像中，普京均未佩戴口罩，这显示出习近平为首的中共政权在对墙内进行高压式动态清零的同时，给了普京一个特权。
 
-该报道还提到，虽然第五巡回法院没有对强制疫苗令做出任何裁定，但此前共和党召开的有关中共病毒疫苗的听证会已经证实，大量的疫苗接种者正在遭受着严重不良反应的侵害。加之中共病毒疫苗开发速度如此之快，以及其缺乏正确医学实验流程的事实，越来越多的美国人已经开始对疫苗安全性持质疑态度。
+第二，尽管中共以免除债务、承诺继续扩大投资的方式，引诱很多国家领导人逗留了3天左右，但习近平用天然气大单和以卢布进行交易，仅换得普京逗留9小时的待遇。这凸显了普京的出场费极其昂贵，以及普京出席冬奥会开幕式的目的，仅仅是为了获取资金支持。
 
-参考链接：[Federal court panel rebukes judge for disregarding vax mandate’s harm to religious airline workers](https://www.lifesitenews.com/news/federal-court-panel-rebukes-judge-for-disregarding-vax-mandates-harm-to-religious-airline-workers/)
+第三，虽然联合国明文规定，奥运前后各国应该暂停纷争，然而作为东道主的习近平，并没有阻止普京对乌克兰的威胁，还违背常理地将普京作为最高国宾进行礼遇。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
+最后，因兴奋剂问题而被禁止以国家队名义参赛的俄罗斯，本就没有资格派出领导人参与开幕式。然而在此问题上，不仅是习近平，就连国际奥委会主席巴赫都默不作声，突显出本次冬奥会的政治操弄。嘉宾还特别指出，虽然在北京市内怎么会晤，属于习近平和普京的自由，但是邀请普京出席冬奥会开幕式，就不符合情理也不符合法理。
 
-总编: Irene木木
-编辑: 谐趣园  
-校正/发稿：Fei797
+参考链接: [https://www.gettr.com/post/pw3jzh830f](https://www.gettr.com/post/pw3jzh830f)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-44.jpg)
+
+编辑/校对/发稿: 卡夫卡的甲壳虫
 
 **更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
+
+
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
