--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,78 +1,29 @@
 ---
-title: 文·贵天成——文贵先生谈“G币、喜币、喜联储”（三十一）
+title: 习太阳会否效仿普京拿下台湾？
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2053053/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/2053246/)
 
-整理：BENJ1**
-**编辑：Sadhu
+作者：波士顿五月花 淘喵先生
+![](https://assets.gnews.org/wp-content/uploads/2022/02/20220223-3.jpg)
+今天，美国和欧盟对俄罗斯的制裁方案陆续出台。和已经获得的巨大战略利益相比，在普大帝眼里，这些制裁措施也许只是隔靴搔痒而已。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/dfdf-1.png)
+与此同时，作为乌克兰乱局的重量级嘉宾观众，一旁观察的习太阳应该是看在眼里喜在心头，大概会在心里想：原来西方如此外强中干，此时我若趁机将台湾揽入怀中，说不定他们投鼠忌器，更不敢把寡人咋地。
 
+想到这里，干练的习主席偕夫人、女儿等一大窝家族人等，召开国安委会议做出决定，不仅要说干就干，而且还得撸起袖子加油干！一边激发启动台湾内部接应同志，一边在墙内高喊：同志们，为解放台湾、实现统一，冲啊！
 
+在疫苗和经济双重危机的夹击之下，西方各国政府都面临着巨大的国内政治压力，尤其是美国拜登政府同时还面临着中期选举的压力，它们都迫切需要一场有一定规模的战争来给自己解套。习太阳此时如果要试图拿下台湾，那真是刚想瞌睡就有人送上个枕头，正好给了它们一个借口，可以成功达成目标。
 
-图片来源：雅典娜农场设计组（614）
+于是大家喜滋滋地合兵一处，名正言顺向中共国开战。为了避免双线作战，西方有可能取消对俄罗斯的制裁，以换取两头鹰龟缩不动作壁上观。
 
+接下来，世界格局将发生巨变，共军被数十国联军一击即溃，战争瞬间决出胜负，共匪猝！联军暂时接管中国政权，以保持政局平稳过渡，中国共产党受到国际法庭彻底审判，因其犯下的严重反人类罪行被永久取缔，新中国联邦隆重登场，中华大地从此焕然一新！
 
-**郭文贵先生2021****年10****月27****日直播**
+* * *
 
-今天已经还差几十个小时咱们就要上市了喜币，在一个月后就上支付系统了，战友们想想你在全世界各地，你有过这样的祖国的概念吗？你有过和你生命和你利益来相连接的这样的希望和这样的机会吗？这都是对你过去的所有的行为一个最好的回报。
+*编辑：黄金时代*
 
-战友们，喜币、喜联储上市，GTV、GClub，它所有的这一切，它不是一个单纯的存在。它是一个爆料革命、新中国联邦的信任，你的为人、你的判断力、你的信仰，你对人的一个相处的关系的综合存在。
+*封面：霹雳鼠年*
 
-竟然昨天有人在常委群说，我要退喜币，你这个人。唉，长岛哥还有谁，大卫啊，你可得统计好，昨天有任何表达倾向的，一定得让他推掉，天王老子不能让他回来，不管你是谁，就像投了那些有后悔的老椅子，我要回来，门儿都没有。我们新中国联邦什么都可以包容，就是不给后悔药。
-
-我再重申一遍，人很多穷是有原因的。我可以告诉大家，如果你在Gettr上打赏、GTV上打赏你不能赚钱的话，我不相信你还有多少这样的机会再发生你生命里。如果喜币你没有抓住机会的话、GTV你没有抓住机会的话、打赏你也都没抓住机会的话，我不相信你生命中还有多少次这样的机会。
-
-**郭文贵先生2021****年10****月29****日直播**
-
-咱们过了下周一，我告诉你我会告诉你全世界上还有让共产党这些年体会到的，有一种死，你知道叫什么死你知道吗？叫后悔死！爆料革命会给你一个重新定义，叫后悔死!还一种死法你知道叫什么死吗？叫妒忌死!我会让你得妒忌病一辈子，比癌症还痛苦。我让你妒忌死。还一种死法，你知道是怎么死法，你知道吗？大家，知道吗？啊？小白我发现你知道，你说说。好像你比我厉害。小白现在那么老实人，一天不说话，现在要抢话了，Rachel 一来，美女面前要表现啊，是吧？哈哈。
-
-大家要记住，你们会看到，新中国联邦，让你看看真真正正的，让你患上一种让你不可思议的病，睁眼——你一睁眼就死，你不敢睁眼。你一睁眼一看手机，哇塞，全是发财的，你一睁眼一看电视机，全是喜币。睁眼死，啊，这三死，就让你患上。后悔不死你，我让你睁眼死。
-
-这个喜币，有些没砸我的，就是绕着弯的想去要喜币。给我捎信，我一概不理，我一个喜币都不会给他。我也没有求过你，我也没有做过许诺。哎，开始砸郭了，为什么？看着喜币现在要上市了，开始砸了，就这种人是很可怕的，这也就是中国共产党最可怕的事情。
-
-资料来源：郭先生GTV和盖特直播视频
-
-往期回顾：
-[**文·贵天成——文贵先生谈“G币-喜币”（一）**](https://gnews.org/zh-hans/1582391/)
-[**文·贵天成——文贵先生谈“G币-喜币”（二）**](https://gnews.org/zh-hans/1584666/)
-[**文·贵天成——文贵先生谈“G币-喜币”（三）**](https://gnews.org/zh-hans/1586436/)
-[**文·贵天成——文贵先生谈“G币-喜币”（四）**](https://gnews.org/zh-hans/1588934/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（五）**](https://gnews.org/zh-hans/1590581/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（六）**](https://gnews.org/zh-hans/1590945/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（七）**](https://gnews.org/zh-hans/1592917/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（八）**](https://gnews.org/zh-hans/1593871/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（九）**](https://gnews.org/zh-hans/1594977/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十）**](https://gnews.org/zh-hans/1596019/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十一）**](https://gnews.org/zh-hans/1596044/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十二）**](https://gnews.org/zh-hans/1597070/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十三）**](https://gnews.org/zh-hans/1598679/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十四）**](https://gnews.org/zh-hans/1599089/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十五）**](https://gnews.org/zh-hans/1599433/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十六）**](https://gnews.org/zh-hans/1599453/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十七）**](https://gnews.org/zh-hans/1601053/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十八）**](https://gnews.org/zh-hans/1620575/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（十九）**](https://gnews.org/zh-hans/1620634/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十）**](https://gnews.org/zh-hans/1620672/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十一）**](https://gnews.org/zh-hans/1620864/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十二）**](https://gnews.org/zh-hans/1622396/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十三）**](https://gnews.org/zh-hans/1622425/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十四）**](https://gnews.org/zh-hans/1622755/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十五）**](https://gnews.org/zh-hans/1623166/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十六）**](https://gnews.org/zh-hans/2051058/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十七） **](https://gnews.org/zh-hans/2051071/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十八）**](https://gnews.org/zh-hans/2051058/)
-[**文·贵天成——文贵先生谈“G币、喜币、喜联储”（二十九） **](https://gnews.org/zh-hans/2051071/)
-**[文·贵天成——文贵先生谈“G币、喜币、喜联储”（三十）](https://gnews.org/zh-hans/2052999/)**[** **](https://gnews.org/zh-hans/2051071/)
-
-发布：星谕
-
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+*发布：吐纳*
 
  
 
