--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,53 +1,54 @@
 ---
-title: 48位顶尖科学家呼吁停止对人类潜在灭绝威胁的功能增强研究
+title: 美国政府问责局：中共军力已对美国构成“重大”挑战
 ---
-`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/2053045/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2053205/)
 
-作者：加拿大温哥华扬帆农场 动物农庄里的小蚂蚁[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)（专栏） Gettr: [@Michael\_tonny89](https://gettr.com/user/michael_tonny89)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Chinese-military-640x480-1.jpg)图片：Kevin Frayer摄/盖蒂图片社
+布赖特巴特新闻网2022年2月22日报道，
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
+一份最近的美国政府监督机构的报告称，中共国不断增长的经济、外交、军事和技术力量，“以及行使这种力量的意愿”，对美国构成了“重大的长期挑战”。
 
-2月22日，48位世界顶尖科学家共同签署纽伦堡宣言《HAMBURG DECLARATION Call for a Global End to High-Risk “Gain-of-Function” Research on Potential Pandemic Pathogens》，呼吁全球终止对潜在大流行病原体的高风险“功能增强”研究。
+美国政府问责局（GAO，是美国国会的下属机构，负责调查、监督联邦政府的规划和支出，其前身是美国总审计局）的报告指出，中共国“在过去20年里大大加强了其军事能力”，并且它“将原本过时的军队转变为能够在常规和非常规能力方面挑战美国军队的军队”。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Shi-Zhengli-4-in-Wuhan-Lab-600x292-1.jpg)
+这份三页的报告概述了中共国国防部在2049年底拥有一支“世界一流”军队的目标中的五个“挑战领域”。
 
-这48位顶尖科学家分别来自美国、英国、法国、德国、意大利、澳大利亚、波多黎各、新西兰、比利时、葡萄牙、日本、印度、奥地利。
+首先，报告称，中共国正在扩大其反介入/区域拒止（A2/AD）能力，或者说拒绝美国或其他国家在紧急情况下进行干预的能力，例如在中共国入侵台湾期间。报告提到：“这种反介入/区域拒止能力包括远程精确打击能力（弹道导弹和巡航导弹），能够打击到包括关岛在内的美国在该地区的后勤和武力投射的军事资产，以及强大的距离其海岸线超过550公里的防空能力。
 
-功能增强，英文Gain-of-Function，是一种通过对生物体进行基因改造的方式，增加基因产物生物学功能的医学研究。包括，改变病毒的发病机理、传播能力或宿主范围（或可以感染的宿主类型）。
+第二，中共国拥有“强大“的进攻和防御能力，旨在在第一岛链或在东亚大陆海岸与第一岛链之间的区域获得海军优势，其中包括台湾。除了拥有能够瞄准距离中共国海岸1500公里的航空母舰的弹道导弹外，“中共国还拥有世界上最大的海军和造船能力。”报告称。
 
-例如，2013年5月2日，中科院院士、中共国农业科学院哈尔滨兽医研究所研究员、博士生导师陈化兰和于康震，邓国华，周继勇，李泽军等人在美国《Science》杂志发表了一篇题为《[Scientists create hybrid flu that can go airborne-H5N1 virus with genes from H1N1 can spread through the air between mammals](https://science.sciencemag.org/content/340/6139/1459)》的论文。文章称，中共国农业科学院哈尔滨兽医研究所与甘肃农业大学动物医学院合作，利用具有高度致命能力、但从未在人类传播的H5N1禽流感病毒，与极易感染人类H1N1流感病毒通过基因重配，制作成了5种超级病毒，这些超级病毒具有通过空气迅速在哺乳动物间传播的能力。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/chenhualan.jpg)
-中共病毒（COVID-19）就是由中共国生物战计划负责人、军事医学科学院院士魏晨少将指挥和控制下的，通过“功能增强”，最终由中科院武汉病毒研究所释放。
+第三，该报告称，中共国的网络能力正被用来削减对手对中共国实施军事行动的能力，并被用来从美国国防工业基地窃取敏感信息。
 
-48位科学家共同签署的《纽伦堡宣言》中提到，科学研究的使命和责任是为人类福祉服务，追求真理，并将获得的知识传播给公众，声明的签署者希望提请注意，近年来，由于新的生物工程技术可以改变危险的病原体，对人类生存的重大威胁。
+第四，报告引用了中共国的太空能力，它说中共国认为这是“现代战争的核心”。报告中提到：“中共国正在发展威胁国防部卫星通信系统的能力。”
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_8975-600x374-1.jpg)
+最后，报告引用了中共国的人工智能能力。该报告称，中共国认为人工智能对其未来的军事和工业力量至关重要，并正在实施到2030年成为全球人工智能领域领导者的计划。
 
-负责任的科学家和研究人员在过去十年中一再指出，通过“功能增强”的研究，天然存在的病毒被人为通过基因序列的改造，或者通过直接基因编辑，或者简单地通过加速传代进化，以促进它们更适合进入人体细胞，让这些病毒适应在人类大流行创造了巨大的潜力。近年来，在大部分是公共资金资助下，进行了诸如禽流感病毒、SARS冠状病毒等多种高危病原体病毒研究！
+报告的结论是，美国应继续努力提高美国的战斗力，加强常规威慑力。它还建议国防部着眼于维护供应链，收集情报，并“负责任地利用空间、网络和人工智能技术来应对潜在的威胁”。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Snipaste_2022-02-23_21-20-28-1.jpg)
+**简评：**
 
-当前的冠状病毒大流行清楚地向人们警示，当病原体极易在人与人之间传播时会发生什么，意味着数百万人死亡，数十亿人的将失去生命或受到威胁。尽管SARS-CoV-2病毒（COVID-19的病原体）的致死率相对较低，仅为1%，但还是对人类产生了巨大的破坏。然而，目前世界各地的各种实验室正在类似的功能增强实验，其中更危险的病毒，如中东呼吸综合症（MERS）、埃博拉病毒（Ebola）或尼帕病毒（Nipah），正在被通过功能增强实验进行操纵。
+在全球关注乌克兰局势及非常有可能同时发生的台湾地区战争的时刻，美国国会的下属机构推出这样一份针对中共国军事力量的分析报告，引人深思。一方面，报告从中共国的反介入/区域拒止能力、进攻和防御能力、网络、太空及人工智能五大方面，阐述了中共国军事发展的重点及美国的应对方案，显示美国的情报能力和对中共国这一“对手”的了解和掌握。
 
-不幸的是，世界上没有一个足够安全的生物技术实验室，可以保证这种被功能增强的病毒不会泄漏，特别是考虑到可能有意或无意获得的功能增加，而且这些功能往往难以预测。对世界上绝大部分人口来说，此类病毒的灾难性生物安全漏洞可能是致命的，尤其是通过基因改造或其他一些方式促进高度危险的病毒通过人类呼吸道传播。
+另一方面，文中多次提到“台湾”、“第一岛链”、“东亚大陆海岸”及“海军”，结合爆料革命、新中国联邦的情报，也让读者了解到台海局势的紧张，火战很可能迫在眉睫。
 
-作为科学家，我们深知科学和研究自由的重要性，但我们仍然呼吁世界各国政府停止这种危险的“功能增强”实验。与这种极端类型的研究相关的全球大流行的风险以及世界上大部分人口灭绝的可能性是根本不能容忍的，也不应该容忍。此外，我们要求由独立的国际监管机构监督和持续监控此类终止。
+我们迫切希望一切对中国共产党这个邪恶组织领导下的中共军事力量的了解，能够让正义力量成功阻止其对台湾的战争，使百姓免于灾难。对中共狼子野心和其对世界威胁的揭露，能够唤醒更多民众，支持推翻邪恶政权。
 
-无论一个国家的宪法和政府的具体形式如何，每位领导人都必须负责任地行事，不仅要为本国人民的福祉做出贡献，还要为整个人类的福祉做出贡献。人类已经学会干预自然界的基本分子构件；这创造了许多保护生命的机会，但也创造了意外终止生命的新方法。让我们在为时已晚之前认真对待这一责任。
+新闻链接：[GAO Report: China’s Growing Power Poses a ‘Significant’ Challenge to the U.S.](https://www.breitbart.com/politics/2022/02/22/gao-report-chinas-growing-power-poses-a-significant-challenge-to-the-u-s/)
 
-这份宣言，也可能开启科学界严肃、认真的进行中共病毒溯源调查！
+*翻译/简评: Ying2064*
+*校对: Harvey（叶知秋）*
 
-参考数据：
+* * *
 
-[陈化兰：H5N1与甲流病毒结合或可人际传播](https://paper.sciencenet.cn/htmlpaper/20135610205737828984.shtm)
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-[“Potential Extinction”: 48 Top Global Scientists Sign Declaration – Demand Ban on Fauci’s “Gain of Function” Research](https://www.thegatewaypundit.com/2022/02/potential-extinction-48-top-global-scientists-sign-declaration-demand-ban-faucis-gain-function-research/)
 
-[“Potential Extinction”: 48 Top Global Scientists Sign Declaration](https://shopperlyf.org/potential-extinction-48-top-global-scientists-sign-declaration/)
+编辑：【英国伦敦喜庄园编辑部】
 
-[Gain-of-function research](https://en.wikipedia.org/wiki/Gain-of-function_research)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
-编辑：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上传：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+
 
  
 
