--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,38 +1,33 @@
 ---
-title: 欧盟理事会主席以环保为由继续与中共勾兑
+title: 研究表明：中共病毒感染者将长期面临心血管疾病风险
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2053035/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2053189/)
 
-作者: 银河系农场—骄子
+撰稿：东京樱花团/asket
 
+![](https://assets.gnews.org/wp-content/uploads/2022/02/研究表明：中共病毒感染者将长期面临心血管疾病风险.jpg)[**图片来源**](https://edition.cnn.com/2022/02/22/health/covid-cardiovascular-complications/index.html)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-45.png)
-2月20日在慕尼黑安全会议上，欧盟理事会主席米歇尔声称欧洲若想克服气候和数字隐私方面的障碍，就必须和中共合作，建立更深层的经济联系。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GettyImages-619435300-640x480-1.png)图片来源: Getty Images
-欧洲高层人士只是口头上表示会支持解决中共国迫害人权的行为，但1200亿欧元的投资协议并未涉及新疆、香港、西藏乃至整个中共国大陆的人权迫害行为，同样也并未要求中共在工厂和农田中解除现代奴隶制，并暗示中共可以继续执行强制劳工的政策。
+随着中共病毒Covid-19大流行病进入第三年，科学家们发现，这种冠状病毒对健康的影响远远超出了疾病的急性期。最近的一项研究发现，患有中共病毒Covid-19的人在康复后至少一年内患心血管疾病的风险增加。
 
-在过去一个月中，因立陶宛的坚持，欧盟开始对中共采取强硬的立场，但德国的一些派别仍不愿与中共对抗，他们害怕失去中共所谓的巨大市场。另外欧盟-中共投资条约的主导者正是德国的前总理默克尔，德国大众、Hugo boss、宝马等公司都从新疆强迫劳工中获利。德国一直要求立陶宛放弃与中共对抗，因立陶宛收到中共的制裁，影响到德国的整个供应链。欧盟理事会主席米歇尔一直支持与共产党深度勾兑。在中共支持的塔利班占领阿富汗美国无奈撤出之后，米歇尔表示既支持美国，也支持中共。
+本月发表在《自然医学》杂志上的这项研究使用了美国退伍军人事务部国家卫生保健数据库的数据，对超过15.3万名有中共病毒Covid-19感染史的退伍军人进行了康复后长达一年的跟踪。
 
-新闻链接: [https://www.breitbart.com/europe/2022/02/21/eu-council-president-shills-for-trade-deal-with-communist-china/](https://www.breitbart.com/europe/2022/02/21/eu-council-president-shills-for-trade-deal-with-communist-china/)
+与那些从未感染过的人相比，有过冠状病毒感染的人更有可能出现包括炎症性心脏病、心力衰竭、心律失常、心脏病发作、中风和凝血的长期症状。以前有中共病毒COVID-19感染的人，出现任何心脏问题的可能性要高出60%以上。其中许多病症，如肺栓塞，是威胁生命的。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-43.jpg)
+首席研究员Ziyad Al-Aly博士说：”令人清晰的一点是，即使在疾病非常轻微或不需要住院治疗的人中，风险也很明显。”
 
-编辑/校对/发稿: 卡夫卡的甲壳虫
+随着疾病严重程度的增加，从长远来看，心血管并发症的风险也在增加。曾在重症监护室接受治疗的人在康复后患心血管疾病的风险最高。例如，没有住院的人患肺栓塞的可能性是没有患中共病毒的人的两倍，而在重症监护室治疗的人患肺栓塞的可能性是21倍以上。在所有年龄、性别、种族和心脏风险因素（如吸烟、高血压和肥胖）中也发现了这种问题的风险。
 
-**更多资讯，更多关注**
+有中共病毒Covid-19感染史的人，在一年后患心肌炎–心肌炎症–的可能性要大五倍以上。尽管研究表明，心肌炎可能是mRNA疫苗的一种罕见反应，但这项研究发现，无论疫苗接种情况如何，中共病毒Covid-19感染引起的心肌炎风险都很明显。
 
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+尽管该研究有一个可靠的样本量，但研究的大多数人是白人男性。此外，由于研究参与者在2021年1月15日前结束，在中共病毒Covid-19疫苗广泛供应之前，几乎没有一个参与者在感染前接种疫苗。
 
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+值得注意的是，纽约大学朗格尼分校的心脏病专家及纽约市阿特里亚医院的医疗主任Nieca Goldberg博士说，尽管中共病毒Covid-19的心脏并发症在有某些风险因素的人中是可以预期的，但她感到惊讶的是，该研究表明，即使在没有心脏疾病史的人中也有长期并发症。
 
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+信息来源： [**People with Covid-19 may face long-term cardiovascular complications, study says**](https://edition.cnn.com/2022/02/22/health/covid-cardiovascular-complications/index.html)
 
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
-
-
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
