--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,16 +1,37 @@
 ---
-title: 人類大重啟已經開始
+title: 樱花数据分析┃日本医院统计：新生儿并发症骤增至4.9倍
 ---
-`MilesGuoLivePPT` [轉載自GNews](https://gnews.org/zh-hans/2053018/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2053134/)
 
-文貴大直播 20220223
+撰稿：东京樱花团/TV
 
-撰稿：麥克阿sir（雅典娜）dingding（香草山）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/樱花数据分析┃日本医院统计：新生儿并发症骤增至4.9倍.jpg)
 
-美工：姐夫說說（雅典娜）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片1-33.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片2-35.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片3-31.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片4-32.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片5-31.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片6-32.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片7-22.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片8-7.png)
-*發布: Theodosia*
+日本岩手医科大学附属医院，在其2022年1月的宣传手册中，公开了妇产科的业绩。[1]
 
+在其第一版的宣传手册中，2021年新生儿并发症发病率达到了54.7%，为2013～2020年平均的31.8倍。这令人吃惊的结果引起了广泛的注意。
+
+但该医院随后表明数字有误，更新数字后，2021新生儿并发症发病率达到8.5%，为2013～2020年平均的4.9倍。4.9倍也仍是一个令人吃惊的结果。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/樱花数据分析┃日本医院统计：新生儿并发症骤增至4.9倍2.png)
+
+制图：chuansang
+
+去年11月，加拿大医生Nagase曾经爆料，在滑铁卢一家医院，半年产出了86名死胎，而历年的数字应为每年5、6名。即为历年的30倍左右。其中所有母亲均为疫苗接种者。据报道同时期，温哥华一家医院，一天内出现13名死胎。[2]
+
+天各一边的日本和加拿大，同时出现呈数倍的新生儿健康事件，不太可能是偶然。与疫苗接种有巨大的相关性。
+
+数据来源：
+
+- [岩手医科大学附属医院宣传手册](/www.hosp.iwate-med.ac.jp/wp/wp-content/uploads/2020/11/202201-3.pdf)
+- [Nagase医生爆料](/rairfoundation.com/doctor-sounds-alarm-stillbirths-explode-in-canada-video/)
+
+
+（注：本文为《樱花数据分析》第十五期）
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
