--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,63 +1,23 @@
 ---
-title: 江苏官方通报“锁链女”案件调查结果 再次引起舆论质疑
+title: 加拿大律师敦促取消紧急状态法
 ---
-`日本東京方舟農場` [轉載自GNews](https://gnews.org/zh-hans/2053008/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2053106/)
 
-**撰稿：日本东京方舟农场 北极**
+采编/编译撰稿：苦尽甜来(文来）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/03-image-2.png)
+据【多伦多太阳报】2月21日报道，加拿大多名大律师近日联名致信给国会议员，反对特鲁多政府擅用《紧急状态法》来处理全国性和平抗议活动，并呼吁议会立即投票取消该法案的实施。
 
-江苏官方调查组否认铁链女是四川李莹，再度引发质疑。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/4-51.png)（图片来自大纪元）
-据大纪元2月23日报道，江苏省本月17日成立“锁链女”调查组，23日发布通报，公布了调查结果。通报发出后再次引发舆论质疑。
+律师团在信中指出，实施《紧急状态法》的标准非常严格，联邦政府必须在国家安全明确遭受威胁的突发情况下，才能宣布公共秩序进入紧急状态。并将因此对加拿大公民自由形成重大挑战。
 
-通报内容基本为徐州当局第四份通报背书，并确认锁链女即是小花梅，并非公众关注的李莹。 同时，一批下层官员被查处。
+目前，特鲁多已根据《紧急状态法》发布命令，要求金融机构向警方报告那些支持或参与抗议活动者的个人财务信息，并对违法者处以罚款和最高五年的监禁。
 
-徐州当局此前曾连发四次通报，但被指漏洞百出，难以服众。
+律师函还强调，当局试图通过强推[紧急状态法]来证明其对民众的和平抗议活动，以及那些反独裁政府的抗议者所采取的暴力镇压方式是正当合法的。而这无疑是对加拿大民主制度最致命的打击。
 
-通报基本为徐州第四份通报背书
+校对编辑：硫酸羟氯喹64
 
-本次通报主要涉及六项此前受到质疑的内容：
+发稿：苦尽甜来 (文来）
 
-1.  认定锁链女（官称“丰县生育八孩女子”）即杨某侠（云南小花梅）。
-
-尤其是关于网民对“董某民结婚证照片上的女子与锁链女不是同一人”的质疑，通报声称锁链女近照系从抖音视频中截取，经修图后流传到网上，与实际容貌有差异。同时，受年龄增长造成的皮肤老化、毛发退化、脂肪组织液化以及牙齿缺失等因素影响，锁链女容貌也发生了变化。
-
-通报还说，2月22日，经中共公安部物证鉴定中心人像鉴定，董某民结婚证照片上的女子与锁链女视频截图照片为同一人。
-
-2.  否认锁链女是李莹
-
-针对“锁链女可能是四川籍失踪女子李莹”的问题，通报声称，先后经南京医科大学司法鉴定所和公安部物证鉴定中心鉴定，再次排除李莹母亲和锁链女存在生物学亲子关系。 据此认定杨某侠与李莹不是同一人。
-
-3.  通报描述小花梅从云南到江苏曾被卖两次，先是江苏东海县卖给徐某东，然后是丰县董某。
-
-4.  通报“解释”了董某民与杨某侠办理结婚证的“混乱”状况。
-
-5.  关于锁链女的精神与身体状况，通报称锁链女先后被徐州、南京和北京等地的各大知名口腔医院“诊断严重的牙周病”造成牙齿脱落；关于她的精神障碍问题，通报称经徐州市医疗专家会诊，后经南京脑科医院司法鉴定所司法鉴定，最终委托中国政法大学证据科学研究院（法庭科学技术研究所）进行复核鉴定，一致诊断锁链女患有精神分裂症。
-
-6.  通报称认定八孩均为锁链女亲生。
-
-7.  通报指董某民等人涉嫌非法拘禁罪、虐待罪，警方将对涉案犯罪事实，包括涉嫌收买被拐卖妇女等犯罪开展侦查取证工作。 并逮捕了桑某妞、时某忠等多名相关犯罪嫌疑犯。
-
-8.  通报以失职渎职为由，处分了包括中共丰县县委书记娄海、丰县公安局四级高级警长程言伟、徐州市妇联副主席高伟等17名党政干部和公职人员。
-
-官方通报引发网络评论翻车
-
-官方的上述通报，在微博上评论翻车，网民纷纷表示质疑、讥讽和愤怒：
-
-@代军哥哥：从“其丈夫”的表述来看，官方还是认可他们的婚姻的，尽管她是被拐卖来的，尽管她的身份造假了，尽管领证程序不合规不合法。 董某民只是涉嫌虐待罪，而没有强奸罪？
-
-@馋了么：不懂就问，丰县这难道不是包庇罪吗？ 明知是被拐来的，还给他办结婚证，上户口等等，包庇罪不犯法？ 不用坐牢？
-
-@一点星眸落莲塘：拐卖回去生个娃就成家庭成员了，就值得个虐待罪。 拐卖妇女，强奸，非法拘禁，户口，假证等等一切问题归零。 牛，真牛。 这还是全国众目睽睽下。 阴沟里的晦暗，那就更别说了。
-
-还有网民一针见血地指出，此案中最关键的证人就是锁链女本人，为何能不让她自己出来说自己是谁？而且这份报导的基调就是证实第四份通报的真实性，全程都没有当事人参予。
-
-参考链接：
-1. [https://www.epochtimes.com/b5/22/2/23/n13598202.htm](https://www.epochtimes.com/b5/22/2/23/n13598202.htm)
-2. [https://news.sina.com.cn/c/2022-02-23/doc-imcwipih4893854.shtml](https://news.sina.com.cn/c/2022-02-23/doc-imcwipih4893854.shtml)
-
-素材采编：北极
-编辑： 老孙
-发布：Linda
+新闻来源: [OPINION: Canadian lawyers urge rejection of Emergencies Act | Toronto Sun](https://torontosun.com/opinion/columnists/opinion-canadian-lawyers-urge-rejection-of-emergencies-act)
 
  
 
