--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,22 +1,35 @@
 ---
-title: 视频｜HBO VICE 采访郭文贵先生背后的真相 &#8211; 揭露HBO VICE精心编织的谎言 Part-10
+title: 欧盟理事会主席以环保为由继续与中共勾兑
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2052876/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2053035/)
 
-制作：香草山视频部
+作者: 银河系农场—骄子
 
-**HBO-VICE 指鹿为马，对采访内容进行有目的性的剪辑，故意将郭先生关于疫苗真相、中共灭白计划的重要爆料内容，扭曲成未经证实、别有用心的虚假信息，意图彻底把郭先生杜撰成为疫苗阴谋论、以及各种谣言的推动者。对此，郭先生进行了严厉的反驳，他指出，自己的爆料从来不求回报，只为拯救更多无辜百姓的生命，所谓的未经证实，别有用心，根本是与魔共舞的主流媒体视而不见、刻意掩盖的结果，那些把公众利益、人民生命当作筹码，换取个人私利的少数财阀权贵才是真正意义上的用心险恶。**
 
-**现在，让我们一起还原事实真相的第10部分：反击HBO-VICE混乱剪辑，散布虚假信息：我们利用郭先生原视频进行回击**。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-45.png)
+2月20日在慕尼黑安全会议上，欧盟理事会主席米歇尔声称欧洲若想克服气候和数字隐私方面的障碍，就必须和中共合作，建立更深层的经济联系。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GettyImages-619435300-640x480-1.png)图片来源: Getty Images
+欧洲高层人士只是口头上表示会支持解决中共国迫害人权的行为，但1200亿欧元的投资协议并未涉及新疆、香港、西藏乃至整个中共国大陆的人权迫害行为，同样也并未要求中共在工厂和农田中解除现代奴隶制，并暗示中共可以继续执行强制劳工的政策。
 
-发稿：小野貓（文凱琳）
+在过去一个月中，因立陶宛的坚持，欧盟开始对中共采取强硬的立场，但德国的一些派别仍不愿与中共对抗，他们害怕失去中共所谓的巨大市场。另外欧盟-中共投资条约的主导者正是德国的前总理默克尔，德国大众、Hugo boss、宝马等公司都从新疆强迫劳工中获利。德国一直要求立陶宛放弃与中共对抗，因立陶宛收到中共的制裁，影响到德国的整个供应链。欧盟理事会主席米歇尔一直支持与共产党深度勾兑。在中共支持的塔利班占领阿富汗美国无奈撤出之后，米歇尔表示既支持美国，也支持中共。
+
+新闻链接: [https://www.breitbart.com/europe/2022/02/21/eu-council-president-shills-for-trade-deal-with-communist-china/](https://www.breitbart.com/europe/2022/02/21/eu-council-president-shills-for-trade-deal-with-communist-china/)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-43.jpg)
+
+编辑/校对/发稿: 卡夫卡的甲壳虫
 
 **更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
 
 
 
