--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,24 +1,15 @@
 ---
-title: 视频｜瑞士信贷银行泄漏的资料显示其为犯罪洗钱间谍活动提供温床
+title: 群體免疫不可實現 疫苗真相解救人類
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2052837/)
+`MilesGuoLivePPT` [轉載自GNews](https://gnews.org/zh-hans/2053020/)
 
-制作：香草山视频部
+文貴大直播 20220223
 
-**2月20日，有媒体披露，最近，瑞士信贷银行的数据发生异常泄漏，一位不愿暴露身份的人士向一家德国媒体泄露了18000多个该银行的账户信息，共持有1000多亿美元。这些账户显示，该银行为一些国家元首、情报官员、受制裁的商人和侵犯人权的罪犯持有大量资金，他们中有的人曾向恐怖分子提供援助，有的人则卷进了一些旷日持久的腐败丑闻。**
+撰稿：Arthur（文徐）（DC）蓮心不染 / MyWay / 坐看雲起時（揚帆）Guocamole（文金欠）（香草山）
 
-**据悉，尽管瑞士的银行长期被法律禁止不得参与和犯罪活动相关的资金转移，但执法并不到位。并且瑞士银行强烈反对法律对自身的指控。瑞士的两家银行巨头，瑞士信贷以及前段时间郭文贵先生终于上诉成功的瑞银UBS，他们所谓的银行保密法，为那些想要藏匿黑钱或者要为犯罪洗钱、逃税的人提供了巨大的便利。**
-
-**美国和其他国家一直在试图打击这些银行。消息人士称，保护金融隐私的借口让瑞士银行肆无忌惮地从事了更多犯罪活动。**
-
-发稿：小野貓（文凱琳）
-
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
-
-
+美工：嘿虎（澳雅）Giraffe31 (澳雅)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-251.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片2-36.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片3-32.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片4-33.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片5-32.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片6-33.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片7-23.png)
+*發布: Theodosia*
 
  
 
