--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,28 +1,15 @@
 ---
-title: 视频｜英国宣布周四起解除所有防疫限制
+title: 人类大重启已经开始
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2052772/)
+`MilesGuoLivePPT` [轉載自GNews](https://gnews.org/zh-hans/2052909/)
 
-发稿：香草山视频部
+文贵大直播 20220223
 
-**英国首相约翰逊，当地时间21日公布「与新冠病毒共存」计划，宣布周四起解除英格兰地区的剩余防疫措施，包括不再要求确诊者自我隔离，出入公共场所无需出示疫苗接种证明等等**
+撰稿：麦克阿sir（雅典娜）dingding（香草山）
 
-**另外，有关追踪确诊病人的密切接触者也将于周四起停止，届时，若密切接触者已完全接种疫苗，将不再需要连续七天进行检测，同时，自4月1日起，当局将不再向民众提供免费的病毒检测服务。**
-
-**约翰逊早前在国会表示，防疫限制对社会、经济以及民众的心理健康构成很大打击，鉴于新冠疫情不会在短时间内消失，继续实施限制是不正确，也是不必要的，因此，政府将鼓励民众自我约束，即使出现染疫症状，也要像对待流行性感冒一样冷静应对。**
-
-**在野工党领袖施纪贤批评约翰逊的做法是极度不负责任的，当地医学组织也指出，与病毒共存不等于无视病毒，取消免费病毒检测将令政府无从监察疫情动向，也难以实现民众自我约束，这样只会带来更多不利风险及社会焦虑。**
-
-**对此，郭文贵先生则有不同见解，在早前的直播中，郭先生认为，现在各国政府解除防疫限制的根本原因，无非是经济压力、政治压力以及即将爆发的疫苗灾难。**
-
-发稿：小野貓（文凱琳）
-
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
-
-
+美工：姐夫说说（雅典娜）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片1-33.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片2-35.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片3-31.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片4-32.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片5-31.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片6-32.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片7-22.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片8-7.png)
+*发布: Theodosia*
 
  
 
