--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,71 +1,77 @@
 ---
-title: 辉瑞和莫德纳公司的股票遭抛售，追责即将到来
+title: 西方用制裁回击俄入侵乌克兰
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2052267/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2052541/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/383b-56d01e8c08397bc4a66666bc8e19c6eb2.jpg)图片来源：www.thedesertreview.com
-华尔街投资者抛售他们的莫德纳和辉瑞公司股票的速度超过了全世界放弃疫苗强制令的速度。莫德纳的股价从高位下跌了70%，而辉瑞公司的股价则下跌了19%。前贝莱德集团(Blackrock，又称黑岩集团)高管兼投资顾问爱德华·多德(Edward Dowd)呼吁莫德纳股价降到零，呼吁辉瑞公司每股收益低于10美元。
+翻译：Steven Hu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-348.jpg)
+图片来源：谷歌图片
 
-鉴于辉瑞现在享有创纪录的每股收益和约2700亿美元的市值，使其成为全球第29大公司，这是怎么做到的呢？对于制药巨头来说，除了利润之外什么都没有，那么问题可能是什么呢？
+美联社2 月 22 日从布鲁塞尔报道了世界领导人针对俄罗斯总统弗拉基米尔·普京（Vladimir Putin）向乌克兰分离主义地区派遣军队的命令而迅速作出的以非军事行动回击，并希望通过制裁而避免在欧洲爆发全面战争。
 
-这些老练的投资者不遵循传统智慧观念，而是做自己的研究，这通常会带来丰厚的回报。
+德国首先宣布采取措施停止了对俄罗斯北溪 2 号天然气管道的认证——而这是莫斯科长期以来寻求的一项巨大而有利可图的交易，但美国批评它增加了欧洲对俄罗斯能源供应的依赖。
 
-爱德华·多德就是这样一位投资者。他看到互联网泡沫即将破裂，并采取了相应的行动。但不幸的是，随着纳斯达克综合指数在2000年损失了40%的价值，其他不那么精明的投资者后来经历了自己大量的互联网投资组合的崩溃。
+美国总统乔·拜登随即也宣布了金融制裁，作为被他称之为的对“俄罗斯开始入侵乌克兰的”的惩罚。“制裁将打击俄罗斯金融机构和寡头。”他表示，“美国将对两家俄罗斯大型金融机构实施‘全面封锁’并对俄罗斯债务实施‘全面性制裁’”。
 
-多德已经对莫德纳和辉瑞公司发出了警告，认为它们是投资者需要放弃的沉船。那么，预见到互联网泡沫和次贷危机的人对莫德纳和辉瑞公司有什么看法呢？在新冠病毒疫苗利润的天堂里可能存在什么麻烦呢？
+拜登总统指出这意味着已经切断了俄罗斯政府与西方金融的联系，使它无法再从西方筹集资金，也无法在美国或欧洲市场上交易它的新债务；拜登同时表示如果普京进一步采取行动，将会实施更多制裁。
 
-以下是多德的话
+欧盟宣布制裁的对象是 351 名投票支持承认乌克兰分离主义地区的杜马议员，以及来自国防和银行业的其他 27 名俄罗斯官员和机构。他们还试图限制莫斯科进入欧盟资本和金融市场。
 
-美国食品药品监督管理局(FDA)是值得信赖的医药产品第三方验证机构。他们50%的预算来自制药公司……由于当时已经存在的制度上的要求，以及他们试图用这种未经证实的技术批准这些未经证实的产品的速度要求，欺诈确实发生了，我的证据是什么? 美国食品和药物管理局与辉瑞公司一起试图隐藏临床数据。
+欧盟外交政策负责人何塞普·博雷尔(Josep Borrell)在巴黎主持欧盟外长会议后表示：“这一系列制裁……将伤害到俄罗斯，而且伤害会很大，”
 
-数据最近出来了……辉瑞产品的全因死亡率失败了，这意味着疫苗组的死亡人数大于安慰剂组。通常在这种情况下，你没有获得此类药物的药物批准。这是黄金标准。我在生物技术行业的所有人都告诉过我，他们被吓坏了……
+欧盟委员会主席乌尔苏拉·冯德莱恩说：“我们将尽一切可能让克里姆林宫难以推行其侵略性的政策。”
 
-不幸的是，这还不是全部。多德认为，尽管他已经成功地预测了职业生涯中的三大欺诈事件，但他现在预计，随着债务泡沫即将破裂，全球金融市场将崩溃。
+除欧盟之外，英国首相鲍里斯·约翰逊（Boris Johnson）周二点名了英国制裁的五家俄罗斯银行和三名富豪。
 
-“全球债务泡沫正处于顶峰……我们到了尽头……我们将在金融市场上看到许多疯狂的事情……我们将看到信贷市场失控，股市失控。美联储得到了喘息的机会……在新冠肺炎疫情的掩护下，他们多印了65%的钱来维持这件事，但我们到此已经走到了尽头。”
+澳大利亚周三表示，它将与美国和英国结盟并制裁两家俄罗斯银行，并对普京的安全委员会的八个成员实施了制裁和旅行禁令。总理斯科特·莫里森表示，这是应对俄罗斯侵略乌克兰的第一批措施。
 
-他澄清说，全球极权主义的出现不纯粹是关于权力和利润。相反，多德认为，当它们意识到经济正在崩溃时，它们的出现就是为了控制大众——其后果可能是养老金和社会保障收入的损失。
+日本也宣布了制裁，首相岸田文雄（Kishida Fumio）周三表示，日本政府将禁止在日本发行新的俄罗斯保险和政府债券。他说，日本还将禁止与乌克兰两个叛军地区有关联的人旅行，同时冻结他们在日本的资产，并将禁止与这两个地区的贸易。
 
-多德预测，莫德纳随着与隐瞒新冠病毒疫苗危险有关的欺诈行为浮出水面，莫德纳公司的股票将降到零并破产，他还预测辉瑞将成为一只10美元以下的股票。多德解释说，聪明的钱已经离开莫德纳了，很快也将离开辉瑞。
+北约总干事延斯·斯托尔滕贝格（Jens Stoltenberg）坚称，如果普京进一步深入乌克兰，“将会伴随着更严厉的制裁，甚至会付出更高的代价。”
 
-多德预计，随着保险业不断发现因mRNA新冠病毒疫苗的并发症而导致的大量死亡病例，诉讼将雪崩式地大量涌现。
+尽管美国和其他西方国家每天都在呼吁通过外交努力来阻止危险的军事对抗。 但周二国务卿安东尼·布林肯(Antony Blinken)取消了计划的周四在日内瓦与俄罗斯外长会晤突显了这一努力的失败，布林肯称俄罗斯的行动表明此举毫无意义。
 
-多德一直在研究新冠病毒疫苗，以及他认为这是有意隐瞒实际死亡风险的明显证据。他指出，辉瑞公司与美国食品和药物管理局在隐瞒他们的数据方面付出了巨大的努力，尽管在发布数据方面面临法律挑战。他将今天的美国食品和药物管理局比作抵押贷款危机期间的评级机构。
+西方大国早就明确表示，乌克兰的命运决不应导致与俄罗斯的直接军事对抗并因而引发世界大战，因此制裁是有限的选择。
 
-接种疫苗组的死亡人数比未接种疫苗组的多。多德假定的欺诈行为是基于美国食品和药物管理局支持辉瑞不发布他们的数据。他认为这是企图有意隐瞒死亡。欺诈使所有的合同失效——这就是判例法。所以你沿着菊链(Daisy-Chain)走下去，这就是法律责任——这对莫德纳来说是破产，辉瑞绝对也逃不过。”
+然而，普京继续玩弄一种导致人们对他的计划和可能采取的行动感到困惑的战略让世界陷入混乱。
 
-多德强调，他并不做空辉瑞或莫德纳的股票。他解释说，他并没有从他们的股价下跌中获利。他还指出，他的预测并不是急剧下降的原因，因为这些情况发生在他提出这一分析之前。
+俄罗斯表示正在向乌克兰东部派遣所谓的“维和人员”，但欧盟外交政策负责人博雷尔(Borrell)强调，他们是乌克兰主权领土上的“部队”。
 
-多德的预测不仅能唤醒华尔街，也能唤醒普通民众。我们是世界上那些沉睡的巨人，我们是那些可以用我们的股票销售和非暴力抗议创造奇迹的人，我们是那些非常沉默的大多数人，我们能够将独裁者赶下台，并选出新的和公平的领导人。
+“我不会说这是一次完全成熟的入侵，但俄罗斯军队在乌克兰的土地上，”博雷尔说。
 
-正如加拿大卡车司机最近呈现的那样，人数是有力量的。随着自由车队如雨后春笋般随处涌现，勇气是可以传染的。如果我们选择行使权力，我们就拥有权力，而如果我们被动地服从，我们就会失去这种权力。
+英国国防部长本·华莱士(Ben Wallace)毫不掩饰。 “俄罗斯已经入侵了乌克兰。他们在 2014 年做到了，非法占领了克里米亚和顿巴斯。这是对他们主权领土的进一步入侵，”。
 
-如果我们现在有足够多的人集体发声，那么我们不仅有能力结束疫苗强制，而且有能力恢复加拿大、澳大利亚、英国、欧洲和美国的所有自由，我们将赢得这一天。我们永远不会允许独裁统治。
+无论用什么语言描述，最新的事态发展都足以将 27 个国家的集团推入高度戒备状态，欧盟外长强调周二宣布的制裁是在与美国和他西方盟国密切协商后进行的。
 
-爱德华·多德告诫那些继续沉睡的人，“如果你做多这两只股票，你就是做多疫苗强制，你就是做多政府控制，你就是做多出卖你的自由”。让我们让所有人都登上自由列车吧。
+他们几乎要达成欧盟和华盛顿威胁要全面军事介入基辅仍然控制的国家领土的“大规模”一揽子计划。
 
-简评：
+“我们的反应方式决定我们的后代对我们的评价”西蒙尼特（Simonyte）说。
 
-值得注意的是，发表评论的是贝莱德投资集团的前基金经理人(贝莱德投资集团目前管理着9万亿美元)，在金融圈错综复杂的关系里，基金经理人的人脉与言论一定代表了部分风向，而股市的下跌程度代表了风向的影响力。
+不过，英国的约翰逊说，过早和过多都可能会损害国际社会的反应。 “这是第一批，我们已准备好了要做的事情，我们随时准备更进一步制裁，”他告诉英国议会。
 
-这里需要科普的是基金经理人在投资上需要解决两个风险，才能安稳赚钱，一个是信用风险，一个是市场风险。很多金融衍生品都是为了解决信用风险和市场风险而设计。在这个报道里明确地指出了疫苗公司的信用风险无法用与政府签订的豁免条例规避，没有尽到告知义务。而市场风险已经事实展现。相信此文会对高杠杆或者高仓疫苗公司的基金一些警示，从而加剧股市的下跌。
+这是第一步，”法国外交部长让·伊夫·勒德里昂 （Jean-Yves Le Drian）对此表示同意并说“我们有更多的弹药。”
 
-新冠疫苗公司与政府监管机构互相勾结，无视法律，隐瞒疫苗无效甚至致人死亡的数据，将不安全的毒疫苗推向市场，当这些秘密公之于众之后，这些医药上市公司的股价暴跌是意料之中的事情，当投资界人士和所有的平民百姓彻底觉醒的时候，也是这些邪恶的医药公司和政府机构要审接受判的时候。而造成这场全球范围内大流行病的源头，中国共产党，毫无疑问会在全世界人民的追责声中走向灭亡。
+Biden的声明似乎保留了美国考虑的一些最广泛和最严厉的处罚。其中包括一项针对俄罗斯的工业和军事高科技出口禁令、以及更全面的金融禁令，这将会削弱俄罗斯与世界其他地区做生意的能力。
 
-新闻链接：
+尽管如此，美国。国务卿布林肯表示，宣布的制裁符合“高压并持久的要求
 
-[https://www.thedesertreview.com/opinion/columnists/pfizer-moderna-investors-run-for-the-exits/article\_f33832ce-9347-11ec-830c-6fe60d1a126b.html](https://www.thedesertreview.com/opinion/columnists/pfizer-moderna-investors-run-for-the-exits/article_f33832ce-9347-11ec-830c-6fe60d1a126b.html)
+白宫副国家安全顾问杜勤普.辛格（Daleep Singh）补充说，最初的制裁传达了一个信息，即“如果入侵继续下去，没有一家俄罗斯金融机构是安全的。”“任何人都不应该认为最大限度地实施制裁是我们的目标。它们服务于更高的目的，目的是威慑和预防。”
 
-* * *
+美国针对的两家俄罗斯主要银行是Vnesheconombank（VEB）和Promsvyazbank Public Joint Stock Company（PSB）。VEB对俄罗斯筹集资金的能力、及PSB对俄罗斯国防部门都至关重要。两家总共持有800多亿美元的资产，它们同美国和欧洲银行系统进行交易的职能将被切断。
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+乌克兰外交部长德米特罗·库列巴 （Dymtro Kuleba）周二在华盛顿与Blinken会面后表示，美国和西方在不断升级的浪潮中对俄罗斯的制裁可能会奏效，但他敦促盟友更具侵略性。Kuleba认为，当普京感到制裁已经达到极限时，他不应该有“任何一丝机会”。
 
+被制裁的人包括国有VTB银行副总裁Denis Bortnikov和PSB董事长兼首席执行官Petr Fradkov、还包括VTB官员的父亲、联邦安全局局长兼安全理事会常任理事国Alexander Bortnikov。Fradkov是俄罗斯前总理、前俄罗前总理、前俄罗斯外交情报局局长Mikhail Fradkov的儿子，他已经受到美国的制裁。
 
-编辑：【英国伦敦喜庄园编辑部】
+普京第一副参谋长谢尔盖·基里延科和他作为俄罗斯顶级社交媒体平台VKontakte母公司首席执行官的儿子弗拉基米尔·基里延科也在制裁之列。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+避免重大冲突的希望正在减少。普京发出指令几个小时后，他承认了乌克兰两个分离主义地区是独立的并提供了俄罗斯的军事支持，同时也是对那些认为他的行为破坏世界秩序的西方领导人的一种对抗。
+
+普京将当前的危机归咎于北约，并称美国领导的联盟对俄罗斯构成威胁，而西方列强认为俄罗斯会利用乌克兰东部地区小规模冲突不断加剧为借口攻击倾向于欧洲的民主国家。
+
+据估计，15万俄罗斯军队聚集在乌克兰三面，美国警告称，莫斯科已经决定入侵。尽管如此，拜登和普京暂时同意在法国总统伊曼纽尔·马克龙的斡旋下召开一次会议，为避免战争做最后的努力。
+
+原文链接：[https://apnews.com/article/russia-ukraine-business-asia-europe-united-nations-881717d75ad21662562dec7b5c8f43b0](https://apnews.com/article/russia-ukraine-business-asia-europe-united-nations-881717d75ad21662562dec7b5c8f43b0)
 
  
 
