--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,29 +1,18 @@
 ---
-title: 习太阳会否效仿普京拿下台湾？
+title: 视频&#124;世界领导人希望通过外交途径解决俄乌紧张局势
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/2053246/)
+`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2053294/)
 
-作者：波士顿五月花 淘喵先生
-![](https://assets.gnews.org/wp-content/uploads/2022/02/20220223-3.jpg)
-今天，美国和欧盟对俄罗斯的制裁方案陆续出台。和已经获得的巨大战略利益相比，在普大帝眼里，这些制裁措施也许只是隔靴搔痒而已。
+制作：香草山视频部
 
-与此同时，作为乌克兰乱局的重量级嘉宾观众，一旁观察的习太阳应该是看在眼里喜在心头，大概会在心里想：原来西方如此外强中干，此时我若趁机将台湾揽入怀中，说不定他们投鼠忌器，更不敢把寡人咋地。
+目前，乌克兰局势的动向引发媒体的持续关注和讨论。美国国家安全和军事分析员Rebecca grant在福克斯新闻节目中谈及乌克兰局势时指出，据北约秘书长Jens Stoltenberg称，普京还没有表现出缓和紧张局势的迹象。因此当前来自各方的混乱信号所指向的可能性局势发展，还有待进一步观察和厘清。不过她强调，如果普京最终选择入侵乌克兰, 它最终会战败。
 
-想到这里，干练的习主席偕夫人、女儿等一大窝家族人等，召开国安委会议做出决定，不仅要说干就干，而且还得撸起袖子加油干！一边激发启动台湾内部接应同志，一边在墙内高喊：同志们，为解放台湾、实现统一，冲啊！
+发稿：谐趣园
 
-在疫苗和经济双重危机的夹击之下，西方各国政府都面临着巨大的国内政治压力，尤其是美国拜登政府同时还面临着中期选举的压力，它们都迫切需要一场有一定规模的战争来给自己解套。习太阳此时如果要试图拿下台湾，那真是刚想瞌睡就有人送上个枕头，正好给了它们一个借口，可以成功达成目标。
-
-于是大家喜滋滋地合兵一处，名正言顺向中共国开战。为了避免双线作战，西方有可能取消对俄罗斯的制裁，以换取两头鹰龟缩不动作壁上观。
-
-接下来，世界格局将发生巨变，共军被数十国联军一击即溃，战争瞬间决出胜负，共匪猝！联军暂时接管中国政权，以保持政局平稳过渡，中国共产党受到国际法庭彻底审判，因其犯下的严重反人类罪行被永久取缔，新中国联邦隆重登场，中华大地从此焕然一新！
-
-* * *
-
-*编辑：黄金时代*
-
-*封面：霹雳鼠年*
-
-*发布：吐纳*
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
  
 
