--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,35 +1,33 @@
 ---
-title: 第五巡回法院再审对宗教航空人员的疫苗授权
+title: 研究表明：中共病毒感染者将长期面临心血管疾病风险
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2053061/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2053189/)
 
-作者：银河系农场 – 骄子
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-2月21日，据当地媒体报道，由美国第五巡回法院的三名法官构成的小组要求下级法官重新审理关于美国联合航空公司强制员工接种中共病毒疫苗的案件。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7-33.jpg)
-据悉，2021年10月，美国联合航空公司针对其六万七千名员工执行了联邦政府要求的中共病毒疫苗强制接种命令。随后，公司中那些未接种的员工要么已经被辞退，要么则是在宗教豁免下面临着无休止的无薪假期。
+撰稿：东京樱花团/asket
 
-为此，该公司申请宗教豁免的18名飞行员向多个地方法院提起了诉讼，要求美联航延迟执行这一不合理的疫苗接种计划。但该诉讼随即遭到地方法院的驳回。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/研究表明：中共病毒感染者将长期面临心血管疾病风险.jpg)[**图片来源**](https://edition.cnn.com/2022/02/22/health/covid-cardiovascular-complications/index.html)
 
-然而，本月17日，第五巡回法院裁定地方法院针对此案的审判存在错误结论，原告事实上持续因宗教信仰受到了胁迫，且该胁迫本身对原告造成了无法弥补的伤害。因此，第五巡回法院要求下级法院对该案件重新进行审理。
+随着中共病毒Covid-19大流行病进入第三年，科学家们发现，这种冠状病毒对健康的影响远远超出了疾病的急性期。最近的一项研究发现，患有中共病毒Covid-19的人在康复后至少一年内患心血管疾病的风险增加。
 
-该报道还提到，虽然第五巡回法院没有对强制疫苗令做出任何裁定，但此前共和党召开的有关中共病毒疫苗的听证会已经证实，大量的疫苗接种者正在遭受着严重不良反应的侵害。加之中共病毒疫苗开发速度如此之快，以及其缺乏正确医学实验流程的事实，越来越多的美国人已经开始对疫苗安全性持质疑态度。
+本月发表在《自然医学》杂志上的这项研究使用了美国退伍军人事务部国家卫生保健数据库的数据，对超过15.3万名有中共病毒Covid-19感染史的退伍军人进行了康复后长达一年的跟踪。
 
-参考链接：[Federal court panel rebukes judge for disregarding vax mandate’s harm to religious airline workers](https://www.lifesitenews.com/news/federal-court-panel-rebukes-judge-for-disregarding-vax-mandates-harm-to-religious-airline-workers/)
+与那些从未感染过的人相比，有过冠状病毒感染的人更有可能出现包括炎症性心脏病、心力衰竭、心律失常、心脏病发作、中风和凝血的长期症状。以前有中共病毒COVID-19感染的人，出现任何心脏问题的可能性要高出60%以上。其中许多病症，如肺栓塞，是威胁生命的。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
+首席研究员Ziyad Al-Aly博士说：”令人清晰的一点是，即使在疾病非常轻微或不需要住院治疗的人中，风险也很明显。”
 
-总编: Irene木木
-编辑: 谐趣园  
-校正/发稿：Fei797
+随着疾病严重程度的增加，从长远来看，心血管并发症的风险也在增加。曾在重症监护室接受治疗的人在康复后患心血管疾病的风险最高。例如，没有住院的人患肺栓塞的可能性是没有患中共病毒的人的两倍，而在重症监护室治疗的人患肺栓塞的可能性是21倍以上。在所有年龄、性别、种族和心脏风险因素（如吸烟、高血压和肥胖）中也发现了这种问题的风险。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+有中共病毒Covid-19感染史的人，在一年后患心肌炎–心肌炎症–的可能性要大五倍以上。尽管研究表明，心肌炎可能是mRNA疫苗的一种罕见反应，但这项研究发现，无论疫苗接种情况如何，中共病毒Covid-19感染引起的心肌炎风险都很明显。
+
+尽管该研究有一个可靠的样本量，但研究的大多数人是白人男性。此外，由于研究参与者在2021年1月15日前结束，在中共病毒Covid-19疫苗广泛供应之前，几乎没有一个参与者在感染前接种疫苗。
+
+值得注意的是，纽约大学朗格尼分校的心脏病专家及纽约市阿特里亚医院的医疗主任Nieca Goldberg博士说，尽管中共病毒Covid-19的心脏并发症在有某些风险因素的人中是可以预期的，但她感到惊讶的是，该研究表明，即使在没有心脏疾病史的人中也有长期并发症。
+
+信息来源： [**People with Covid-19 may face long-term cardiovascular complications, study says**](https://edition.cnn.com/2022/02/22/health/covid-cardiovascular-complications/index.html)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
