--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,37 +1,11 @@
 ---
-title: DC每日热点0223
+title: 渥太华警察局长：对此次抗议中的人的调查将持续数月
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2053318/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2053367/)
 
-编辑：楚门门
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8410F16C-3399-4758-9CA1-C4E0A54E4FDE-scaled.jpeg)
-道琼斯指数 33596.61 ▼1.42%
-纳斯达克指数 13381.52 ▼0.23%
-WTI纽约原油CFD 91.695▼0.21%
-布伦特原油CFD 93.813 ▼0.04%
-标普50指数 2,700.73▼56.31%
-美元兑人民币 1USD=6.312 RMB
-美元兑港币 1USD=7.803 HKD
-国际黄金 1901.80美元/盎司
-全球CCP病毒感染人数428,760,419例
+02/19/2022 渥太华警察局长：对此次抗议中的人的调查将持续数月。调查有很多不同的层面，从联邦财政层面，从省级许可层面，从刑法层面，从市政违反法院命令层面，违反法院禁令层面。我们将让占领我们街道的人们负责。
 
-1、 疫情危急香港推全民强检 成败或影响林郑连任
-2、美议员点名习明泽在美读研 提案禁止中共高官子女来美深造
-3、朝鲜正在利用全球对加密货币缺乏监管控制来窃取数字货币，为其核武器和导弹计划提供资金
-4、拜登宣布采取加强关键矿物质供应链的行动，终止对中共国的依赖
-5、美国总统拜登22日切断了俄罗斯政府的国际融资渠道并对两家大型银行实施制裁
-6、联合国人权专家：中共国与俄罗斯向缅甸军政府提供武器杀戮平民
-7、中共国今称拒绝将台湾与乌克兰局势相提并论
-8、超过6成台湾民众认定，北京不会在俄国入侵乌克兰之时侵占台湾
-9、欧盟将制裁俄国防部长和俄总统办公厅主任等个人和实体
-10、美国国务卿布林肯：已取消与俄罗斯外长会晤
-11、海牙国际法院审罗兴亚人种族灭绝案：今决定谁有权庭前应诉
-12、瑞信银外泄数据显示宋楚瑜曾存款1367万瑞士法郎遭宋否认
-13、日本首相岸田文雄宣布对俄罗斯的制裁措施
-14、英国制裁俄罗斯5银行3大亨 议员要求加大惩罚护台
-15、澳洲宣布首轮对俄制裁措施，确保与美国和英国等盟友对俄实施的制裁“同步”
-16、俄乌危机 德国宣布停止北溪2号天然气项目
-17、43议员致信拜登 要求他向乌派兵须获国会授权
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
