--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,23 +1,22 @@
 ---
-title: 俄军侵入乌克兰令欧洲局势骤然升级
+title: 视频&#124;英首相警告乌克兰或将危及台湾
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2053279/)
+`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2053354/)
 
-采编： 风云小哥     编译撰稿：文明(添草灭共)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/04-image-6.png)
-据英国【每日邮报】2月21日报道，当天凌晨在乌克兰[顿涅茨克]地区出现了多辆没有任何国籍标志的装甲车。与此同时，乌克兰军方称在边界线附近遭到了俄方猛烈的炮击，造成两名士兵死亡、12人受伤。
+制作：香草山视频部
 
-据悉，［顿涅茨克］和［卢甘斯克］地区位于乌克兰东部，并于2014年在俄罗斯支持的分离主义势力夺取控制权后宣布独立。但其合法性一直未被西方国家承认，多年来都处于一触即发的停火状态。
+2月19日，海外媒体报导，英国首相鲍里斯•约翰逊在慕尼黑安全会议上针对目前俄乌情势发表言论，他表示：在乌克兰受到入侵、威胁时，如果西方国家不能兑现支持乌克兰主权的承诺，无异于在对全球宣告，俄罗斯的行为可能是正确的。这将对包括台湾在内的民主国家造成破坏性的后果。美国众议院情报委员会主席、众议员亚当•希夫也有类似的看法，
 
-报道称，总统普京于2月21日签署法令，正式支持这两个地区的独立，同时要求俄军方进入该地区执行所谓的“维和任务”。 但欧美等国已明确表示，俄军对乌克兰领土任何形式的入侵都将引发前所未有的强烈制裁。
+当前，尽管俄罗斯否认准备入侵乌克兰，但由俄罗斯军队在乌克兰边境附近集结，总统普京已经启动战略核导弹部队演习的态势看来，普京的意图仍很难预测，俄乌危机仍很严峻。
 
-评论指出，俄罗斯此前曾兵不血刃轻易拿下克里米亚。在西方国家对此次侵略的一致沉默和纵容之下，尝到甜头的普京如今再次挑起战争，意图通过占领乌克兰来霸权和掠夺欧洲，并幻想以此与美国分庭抗礼。
+约翰逊认为，在中共一直将台湾视为其领土的一部分，并且不排除使用武力犯台的情况下，西方国家面对俄罗斯入侵乌克兰问题的态度，将会对后续台海情势发展或危机产生不可轻忽影响力。
 
-校对编辑：硫酸羟氯喹64
+发稿：谐趣园
 
-发稿：苦尽甜来 (文来）
-
-新闻来源： [https://www.dailymail.co.uk/news/article-10536711/Putin-despatches-armed-forces-two-rebel-held-territories-Ukraine.html?ito=social-twitter\_mailonline](https://www.dailymail.co.uk/news/article-10536711/Putin-despatches-armed-forces-two-rebel-held-territories-Ukraine.html?ito=social-twitter_mailonline)
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
  
 
