--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,25 +1,38 @@
 ---
-title: 乌克兰宣布进入紧急状态，开始征召预备役军人
+title: 2022年北京冬奥会的收视率为历史最低
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2053275/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2053345/)
 
-撰稿：东京樱花团/盖特第一批注册
+作者: 首尔天池农场-zzballack
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰宣布进入紧急状态，开始征召预备役军人.png)[图片来源](https://news.yahoo.co.jp/articles/58fd2542159908aa204fe9a6e6557b0348dc242e/images/000)
 
-2月23日，乌克兰国家安全和国防委员会决定宣布进入紧急状态。 当局还开始征召预备役人员，将提高警戒状态，为俄罗斯的另一次军事入侵做准备。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-45.png)
+据《新闻极限》2月22日援引《华尔街日报》报道说，NBC环球自数十年前开始转播奥运会以来，北京冬奥会的观看人数是最少的，黄金时段的平均观众人数只有1140万人，比2018年的平昌冬奥会下降了42%。相较之下，NBC的超级碗直播吸引了1.12亿名观众。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/aa52bc8739856499e619c6e48a4f40d3_500x0.jpeg)图片来源: Gettr (@JeffS1)
+为了弥补观众少的问题，在为期两周多的时间里，NBC环球为广告商提供了额外的广告播放时间，这些广告通过NBC环球的电视、有线网络和流媒体平台播出。
 
-在部分被亲俄部队占领的两个东部省份已经宣布了紧急状态，并将扩大到整个乌克兰。
+NBC体育集团总裁皮特·贝瓦茨夸将人们对比赛缺乏兴趣归因于中共国“异常严厉的”防疫协议、看台上几乎没有观众以及一些奥运选手戴着防护口罩等等。鉴于大流行病源自中共国，今年的广告商选择低调行事，回避文化或社会问题。
 
-23日，乌克兰军队开始征召18-60岁公民的预备役军人。同一天，乌克兰外交部要求居住在俄罗斯的乌克兰公民立即离开该国。
+新闻链接: [https://www.newsmax.com/streettalk/beijing-olympics-nbc-covid/2022/02/22/id/1057855/](https://www.newsmax.com/streettalk/beijing-olympics-nbc-covid/2022/02/22/id/1057855/)
 
-信息来源：
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-44.jpg)
 
-[ウクライナ、非常事態宣言発令へ　予備役招集も開始](https://www.nikkei.com/article/DGXZQOCB2348D0T20C22A2000000/)
+编辑/校对/发稿: 卡夫卡的甲壳虫
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+**更多资讯，更多关注**
+
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
