--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,43 +1,37 @@
 ---
-title: 日媒斥责中共冬奥会是习和普京的政治勾兑
+title: DC每日热点0223
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2053254/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2053318/)
 
-作者: 日本方舟农场 Andy5
+编辑：楚门门
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8410F16C-3399-4758-9CA1-C4E0A54E4FDE-scaled.jpeg)
+道琼斯指数 33596.61 ▼1.42%
+纳斯达克指数 13381.52 ▼0.23%
+WTI纽约原油CFD 91.695▼0.21%
+布伦特原油CFD 93.813 ▼0.04%
+标普50指数 2,700.73▼56.31%
+美元兑人民币 1USD=6.312 RMB
+美元兑港币 1USD=7.803 HKD
+国际黄金 1901.80美元/盎司
+全球CCP病毒感染人数428,760,419例
 
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-45.png)
-当地时间2月18日，日媒从四个方面斥责本次中共冬奥会，就是习近平和普京上演的一场赤裸裸的政治勾兑。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-23-at-9.58.38-PM.png)图片来源: Gettr(@AndySaiKai)
-第一，普京是唯一一个在2月4日，就跟习近平会晤的国家元首。并且从下飞机到跟习近平的会晤，所有媒体拍摄到的影像中，普京均未佩戴口罩，这显示出习近平为首的中共政权在对墙内进行高压式动态清零的同时，给了普京一个特权。
-
-第二，尽管中共以免除债务、承诺继续扩大投资的方式，引诱很多国家领导人逗留了3天左右，但习近平用天然气大单和以卢布进行交易，仅换得普京逗留9小时的待遇。这凸显了普京的出场费极其昂贵，以及普京出席冬奥会开幕式的目的，仅仅是为了获取资金支持。
-
-第三，虽然联合国明文规定，奥运前后各国应该暂停纷争，然而作为东道主的习近平，并没有阻止普京对乌克兰的威胁，还违背常理地将普京作为最高国宾进行礼遇。
-
-最后，因兴奋剂问题而被禁止以国家队名义参赛的俄罗斯，本就没有资格派出领导人参与开幕式。然而在此问题上，不仅是习近平，就连国际奥委会主席巴赫都默不作声，突显出本次冬奥会的政治操弄。嘉宾还特别指出，虽然在北京市内怎么会晤，属于习近平和普京的自由，但是邀请普京出席冬奥会开幕式，就不符合情理也不符合法理。
-
-参考链接: [https://www.gettr.com/post/pw3jzh830f](https://www.gettr.com/post/pw3jzh830f)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-44.jpg)
-
-编辑/校对/发稿: 卡夫卡的甲壳虫
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
-
-
-
-
+1、 疫情危急香港推全民强检 成败或影响林郑连任
+2、美议员点名习明泽在美读研 提案禁止中共高官子女来美深造
+3、朝鲜正在利用全球对加密货币缺乏监管控制来窃取数字货币，为其核武器和导弹计划提供资金
+4、拜登宣布采取加强关键矿物质供应链的行动，终止对中共国的依赖
+5、美国总统拜登22日切断了俄罗斯政府的国际融资渠道并对两家大型银行实施制裁
+6、联合国人权专家：中共国与俄罗斯向缅甸军政府提供武器杀戮平民
+7、中共国今称拒绝将台湾与乌克兰局势相提并论
+8、超过6成台湾民众认定，北京不会在俄国入侵乌克兰之时侵占台湾
+9、欧盟将制裁俄国防部长和俄总统办公厅主任等个人和实体
+10、美国国务卿布林肯：已取消与俄罗斯外长会晤
+11、海牙国际法院审罗兴亚人种族灭绝案：今决定谁有权庭前应诉
+12、瑞信银外泄数据显示宋楚瑜曾存款1367万瑞士法郎遭宋否认
+13、日本首相岸田文雄宣布对俄罗斯的制裁措施
+14、英国制裁俄罗斯5银行3大亨 议员要求加大惩罚护台
+15、澳洲宣布首轮对俄制裁措施，确保与美国和英国等盟友对俄实施的制裁“同步”
+16、俄乌危机 德国宣布停止北溪2号天然气项目
+17、43议员致信拜登 要求他向乌派兵须获国会授权
 
  
 
