--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,33 +1,24 @@
 ---
-title: 疫情次生灾难给英格兰人带来心理健康问题
+title: 俄军侵入乌克兰令欧洲局势骤然升级
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2053214/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2053279/)
 
-作者：台灣寶島農場 – 尋文客
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-当地时间2月21日，据相关媒体消息显示，英格兰的卫生官员警告称，由于当地在中共病毒疫情中实行的封锁措施，英格兰预计有一千万人，包括150万儿童和青少年将因此遭受精神健康问题的困扰。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-30.jpg)
-研究人员指出，自中共病毒开始以来，当地因心理健康问题而需要紧急治疗的儿童人数增加了52%，同期患有饮食失调的18岁以下儿童也增加了72%。另外，英格兰有160万人正在等待接受心理健康方面的专业治疗，其余还有八百万需要专业治疗的患者尚未进入等待名单。
+采编： 风云小哥     编译撰稿：文明(添草灭共)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/04-image-6.png)
+据英国【每日邮报】2月21日报道，当天凌晨在乌克兰[顿涅茨克]地区出现了多辆没有任何国籍标志的装甲车。与此同时，乌克兰军方称在边界线附近遭到了俄方猛烈的炮击，造成两名士兵死亡、12人受伤。
 
-对此，分析人员表示，中共病毒疫情的封锁措施已经对大量英格兰人民的精神健康造成了不利的影响，同时，大量患者的积压已经让英格兰部分地区的精神健康专家不堪重负。至于许多缺乏足够护理的患者，他们的未来也令人担忧。
+据悉，［顿涅茨克］和［卢甘斯克］地区位于乌克兰东部，并于2014年在俄罗斯支持的分离主义势力夺取控制权后宣布独立。但其合法性一直未被西方国家承认，多年来都处于一触即发的停火状态。
 
-目前，英格兰的卫生官员已经将当地民众精神健康问题的现状称为“第二次大流行”。
+报道称，总统普京于2月21日签署法令，正式支持这两个地区的独立，同时要求俄军方进入该地区执行所谓的“维和任务”。 但欧美等国已明确表示，俄军对乌克兰领土任何形式的入侵都将引发前所未有的强烈制裁。
 
-参考链接：[‘Second Pandemic’ – 10 Million Britons Need Mental Health Care After Lockdowns](https://www.breitbart.com/europe/2022/02/21/second-pandemic-10-million-britons-in-need-mental-health-treatment/)
+评论指出，俄罗斯此前曾兵不血刃轻易拿下克里米亚。在西方国家对此次侵略的一致沉默和纵容之下，尝到甜头的普京如今再次挑起战争，意图通过占领乌克兰来霸权和掠夺欧洲，并幻想以此与美国分庭抗礼。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
+校对编辑：硫酸羟氯喹64
 
-总编: Irene木木
-编辑: 谐趣园/静言 
-校正/发稿：Fei797
+发稿：苦尽甜来 (文来）
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+新闻来源： [https://www.dailymail.co.uk/news/article-10536711/Putin-despatches-armed-forces-two-rebel-held-territories-Ukraine.html?ito=social-twitter\_mailonline](https://www.dailymail.co.uk/news/article-10536711/Putin-despatches-armed-forces-two-rebel-held-territories-Ukraine.html?ito=social-twitter_mailonline)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
