--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,55 +1,25 @@
 ---
-title: 美国政府问责局：中共军力已对美国构成“重大”挑战
+title: 乌克兰宣布进入紧急状态，开始征召预备役军人
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2053205/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2053275/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Chinese-military-640x480-1.jpg)图片：Kevin Frayer摄/盖蒂图片社
-布赖特巴特新闻网2022年2月22日报道，
+撰稿：东京樱花团/盖特第一批注册
 
-一份最近的美国政府监督机构的报告称，中共国不断增长的经济、外交、军事和技术力量，“以及行使这种力量的意愿”，对美国构成了“重大的长期挑战”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰宣布进入紧急状态，开始征召预备役军人.png)[图片来源](https://news.yahoo.co.jp/articles/58fd2542159908aa204fe9a6e6557b0348dc242e/images/000)
 
-美国政府问责局（GAO，是美国国会的下属机构，负责调查、监督联邦政府的规划和支出，其前身是美国总审计局）的报告指出，中共国“在过去20年里大大加强了其军事能力”，并且它“将原本过时的军队转变为能够在常规和非常规能力方面挑战美国军队的军队”。
+2月23日，乌克兰国家安全和国防委员会决定宣布进入紧急状态。 当局还开始征召预备役人员，将提高警戒状态，为俄罗斯的另一次军事入侵做准备。
 
-这份三页的报告概述了中共国国防部在2049年底拥有一支“世界一流”军队的目标中的五个“挑战领域”。
+在部分被亲俄部队占领的两个东部省份已经宣布了紧急状态，并将扩大到整个乌克兰。
 
-首先，报告称，中共国正在扩大其反介入/区域拒止（A2/AD）能力，或者说拒绝美国或其他国家在紧急情况下进行干预的能力，例如在中共国入侵台湾期间。报告提到：“这种反介入/区域拒止能力包括远程精确打击能力（弹道导弹和巡航导弹），能够打击到包括关岛在内的美国在该地区的后勤和武力投射的军事资产，以及强大的距离其海岸线超过550公里的防空能力。
+23日，乌克兰军队开始征召18-60岁公民的预备役军人。同一天，乌克兰外交部要求居住在俄罗斯的乌克兰公民立即离开该国。
 
-第二，中共国拥有“强大“的进攻和防御能力，旨在在第一岛链或在东亚大陆海岸与第一岛链之间的区域获得海军优势，其中包括台湾。除了拥有能够瞄准距离中共国海岸1500公里的航空母舰的弹道导弹外，“中共国还拥有世界上最大的海军和造船能力。”报告称。
+信息来源：
 
-第三，该报告称，中共国的网络能力正被用来削减对手对中共国实施军事行动的能力，并被用来从美国国防工业基地窃取敏感信息。
+[ウクライナ、非常事態宣言発令へ　予備役招集も開始](https://www.nikkei.com/article/DGXZQOCB2348D0T20C22A2000000/)
 
-第四，报告引用了中共国的太空能力，它说中共国认为这是“现代战争的核心”。报告中提到：“中共国正在发展威胁国防部卫星通信系统的能力。”
-
-最后，报告引用了中共国的人工智能能力。该报告称，中共国认为人工智能对其未来的军事和工业力量至关重要，并正在实施到2030年成为全球人工智能领域领导者的计划。
-
-报告的结论是，美国应继续努力提高美国的战斗力，加强常规威慑力。它还建议国防部着眼于维护供应链，收集情报，并“负责任地利用空间、网络和人工智能技术来应对潜在的威胁”。
-
-**简评：**
-
-在全球关注乌克兰局势及非常有可能同时发生的台湾地区战争的时刻，美国国会的下属机构推出这样一份针对中共国军事力量的分析报告，引人深思。一方面，报告从中共国的反介入/区域拒止能力、进攻和防御能力、网络、太空及人工智能五大方面，阐述了中共国军事发展的重点及美国的应对方案，显示美国的情报能力和对中共国这一“对手”的了解和掌握。
-
-另一方面，文中多次提到“台湾”、“第一岛链”、“东亚大陆海岸”及“海军”，结合爆料革命、新中国联邦的情报，也让读者了解到台海局势的紧张，火战很可能迫在眉睫。
-
-我们迫切希望一切对中国共产党这个邪恶组织领导下的中共军事力量的了解，能够让正义力量成功阻止其对台湾的战争，使百姓免于灾难。对中共狼子野心和其对世界威胁的揭露，能够唤醒更多民众，支持推翻邪恶政权。
-
-新闻链接：[GAO Report: China’s Growing Power Poses a ‘Significant’ Challenge to the U.S.](https://www.breitbart.com/politics/2022/02/22/gao-report-chinas-growing-power-poses-a-significant-challenge-to-the-u-s/)
-
-*翻译/简评: Ying2064*
-*校对: Harvey（叶知秋）*
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
-
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
