--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,27 +1,35 @@
 ---
-title: 乌克兰宣布进入紧急状态 开始征召预备役
+title: 第五巡回法院再审对宗教航空人员的疫苗授权
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2052934/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2053061/)
 
-撰稿：东京樱花团/百花李香
+作者：银河系农场 – 骄子
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月21日，据当地媒体报道，由美国第五巡回法院的三名法官构成的小组要求下级法官重新审理关于美国联合航空公司强制员工接种中共病毒疫苗的案件。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/7-33.jpg)
+据悉，2021年10月，美国联合航空公司针对其六万七千名员工执行了联邦政府要求的中共病毒疫苗强制接种命令。随后，公司中那些未接种的员工要么已经被辞退，要么则是在宗教豁免下面临着无休止的无薪假期。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰宣布进入紧急状态-开始征召预备役.jpg)[图片来源](https://www.ukrgate.com/eng/?p=8741)
+为此，该公司申请宗教豁免的18名飞行员向多个地方法院提起了诉讼，要求美联航延迟执行这一不合理的疫苗接种计划。但该诉讼随即遭到地方法院的驳回。
 
-因俄罗斯在21日承认该国东部亲俄控制地区的独立，其它地区遭受入侵的威胁日趋严重，乌克兰国家安全和国防委员会23日决定宣布进入紧急状态。紧急状态将在议会批准后正式宣布。
+然而，本月17日，第五巡回法院裁定地方法院针对此案的审判存在错误结论，原告事实上持续因宗教信仰受到了胁迫，且该胁迫本身对原告造成了无法弥补的伤害。因此，第五巡回法院要求下级法院对该案件重新进行审理。
 
-紧急状态将持续30天，并可延长。该声明已经在亲俄派活跃的东部两个省份发布，其它地区也受此声明的约束。除此之外，议会还在审议一项允许公民携带武器的法案。
+该报道还提到，虽然第五巡回法院没有对强制疫苗令做出任何裁定，但此前共和党召开的有关中共病毒疫苗的听证会已经证实，大量的疫苗接种者正在遭受着严重不良反应的侵害。加之中共病毒疫苗开发速度如此之快，以及其缺乏正确医学实验流程的事实，越来越多的美国人已经开始对疫苗安全性持质疑态度。
 
-泽连斯基总统22日发表讲话称，他已下达了征召令。23日乌克兰武装部队开始征召18至60岁的公民做预备役。
+参考链接：[Federal court panel rebukes judge for disregarding vax mandate’s harm to religious airline workers](https://www.lifesitenews.com/news/federal-court-panel-rebukes-judge-for-disregarding-vax-mandates-harm-to-religious-airline-workers/)
 
-此外，外交部长库莱巴23日在推特上发文，他呼吁合作伙伴对俄罗斯实施更多制裁，以阻止进一步的攻击。对美国和欧洲昨天做出制裁的决定表示感谢，称已经迈出了决定性的第一步。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
 
-乌克兰外交部在23日的声明中敦促，在俄罗斯的所有乌克兰公民要立即离开该国。
+总编: Irene木木
+编辑: 谐趣园  
+校正/发稿：Fei797
 
-信息源：[非常事態宣言発令へ　予備役の招集開始　ウクライナ](text=)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
