--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,24 +1,43 @@
 ---
-title: 视频｜瑞士信贷银行泄漏的资料显示其为犯罪洗钱间谍活动提供温床
+title: 紧随西方盟国，莫里森总理宣布制裁俄罗斯措施
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2052837/)
+`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/2052969/)
 
-制作：香草山视频部
+#### 【雅典娜观察】和您一起洞察世界
 
-**2月20日，有媒体披露，最近，瑞士信贷银行的数据发生异常泄漏，一位不愿暴露身份的人士向一家德国媒体泄露了18000多个该银行的账户信息，共持有1000多亿美元。这些账户显示，该银行为一些国家元首、情报官员、受制裁的商人和侵犯人权的罪犯持有大量资金，他们中有的人曾向恐怖分子提供援助，有的人则卷进了一些旷日持久的腐败丑闻。**
+翻译/编辑：文泓
 
-**据悉，尽管瑞士的银行长期被法律禁止不得参与和犯罪活动相关的资金转移，但执法并不到位。并且瑞士银行强烈反对法律对自身的指控。瑞士的两家银行巨头，瑞士信贷以及前段时间郭文贵先生终于上诉成功的瑞银UBS，他们所谓的银行保密法，为那些想要藏匿黑钱或者要为犯罪洗钱、逃税的人提供了巨大的便利。**
-
-**美国和其他国家一直在试图打击这些银行。消息人士称，保护金融隐私的借口让瑞士银行肆无忌惮地从事了更多犯罪活动。**
-
-发稿：小野貓（文凱琳）
-
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/56-1.png)图片来源：Skynews
 
 
+澳大利亚总理莫里森宣布了针对俄罗斯入侵乌克兰的有针对性的旅行禁令和一系列金融制裁，他称俄罗斯的行为是“不合理、无根据、无端和不可接受的”。
+
+周三，莫里森召开内阁国家安全委员会紧急会议，讨论乌克兰危机升级后的下一步行动。
+
+与美国和英国步调一致，澳洲将对美国早些时候点名的五家俄罗斯银行实施制裁，此外，还将对相关运输、能源、电信、石油、天然气和矿产储备行业实施多项金融制裁。
+
+此前，澳洲已对俄罗斯安理会的八名官员实施旅行禁令和制裁，莫里森警告可能扩大制裁范围，并表示制裁将立即开始，力度将“越来越强”。
+
+莫里森先生说：“我们将与所有的伙伴和所有认为俄罗斯入侵其邻国是完全不可接受的人一起站出来反对俄罗斯。”
+
+“这些制裁将有针对性扩大个人的范围。澳洲可以列出有针对性的金融制裁和旅行禁令的实体和个人。它的对象包括对俄罗斯具有战略和经济意义的个人和实体。”
+
+“莫斯科的决定从根本上损害了乌克兰的主权和领土完整，在国际法上没有任何效力。（我们）将继续与美国、英国和欧盟以及其他政府密切协调，以确保俄罗斯的侵略付出沉重代价，”他说。
+
+早些时候，外交部长玛丽斯佩恩表示，澳大利亚将使用“我们可用的任何工具”实施严厉制裁，并将考虑驱逐俄罗斯在堪培拉的最高外交官。
+
+“不过，目前的重点是有针对性的制裁，这将对责任人产生影响。虽然工具包中还有其他选项和其他工具。”
+
+参考链接：[Ukraine invasion: How Scott Morrison will punish Russia | news.com.au — Australia’s leading news site](https://www.news.com.au/national/politics/scott-morrison-to-chair-national-security-committee-meeting-amid-ukrainian-crisis/news-story/9f63a62ee5c580a8afd58df927c3fa34)
+
+发布：tianzhihuan
+
+更多资讯，请关注：**
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
