--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,25 +1,27 @@
 ---
-title: 视频｜中共决定制裁向台湾军售的美军工企业
+title: 乌克兰宣布进入紧急状态 开始征召预备役
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2052820/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2052934/)
 
-制作：香草山视频部
+撰稿：东京樱花团/百花李香
 
-**2月21日，中共外交部发言人汪文斌在例行记者会上宣称，美国向台湾地区出售武器，严重违反一个中国的原则和中美联合公报817公报的规定，严重损害中国主权、中美关系和台海和平稳定，称中共政府决定对长期参与美国向台湾地区出售武器的美国军工企业——雷神技术公司和洛克希德·马丁公司——的行为实施反制。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰宣布进入紧急状态-开始征召预备役.jpg)[图片来源](https://www.ukrgate.com/eng/?p=8741)
 
-**据悉，美国国务院2月7日批准了一项对台出售1亿美元的爱国者系统的计划，这是拜登政府执政以来第二次批准对台军售计划。**
+因俄罗斯在21日承认该国东部亲俄控制地区的独立，其它地区遭受入侵的威胁日趋严重，乌克兰国家安全和国防委员会23日决定宣布进入紧急状态。紧急状态将在议会批准后正式宣布。
 
-**中共也不是第一次叫嚣对美国企业实施制裁了，2020年10月，中共就曾声称对雷神、波音等公司进行制裁。不过，有观察人士指出，始终没有看到有数据资料显示所谓“中共制裁”对美国企业产生何种影响。这种虚张声势的“制裁”恐怕最终只能沦为全球的笑柄。**
+紧急状态将持续30天，并可延长。该声明已经在亲俄派活跃的东部两个省份发布，其它地区也受此声明的约束。除此之外，议会还在审议一项允许公民携带武器的法案。
 
-发稿：小野貓（文凱琳）
+泽连斯基总统22日发表讲话称，他已下达了征召令。23日乌克兰武装部队开始征召18至60岁的公民做预备役。
 
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+此外，外交部长库莱巴23日在推特上发文，他呼吁合作伙伴对俄罗斯实施更多制裁，以阻止进一步的攻击。对美国和欧洲昨天做出制裁的决定表示感谢，称已经迈出了决定性的第一步。
 
+乌克兰外交部在23日的声明中敦促，在俄罗斯的所有乌克兰公民要立即离开该国。
 
+信息源：[非常事態宣言発令へ　予備役の招集開始　ウクライナ](text=)
 
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
