--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,18 +1,21 @@
 ---
-title: 视频&#124;世界领导人希望通过外交途径解决俄乌紧张局势
+title: 秘翻在线：中共国面临粮食不安全 规模性返贫的困境
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2053294/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2053357/)
 
-制作：香草山视频部
+**撰稿：葛大饼**
 
-目前，乌克兰局势的动向引发媒体的持续关注和讨论。美国国家安全和军事分析员Rebecca grant在福克斯新闻节目中谈及乌克兰局势时指出，据北约秘书长Jens Stoltenberg称，普京还没有表现出缓和紧张局势的迹象。因此当前来自各方的混乱信号所指向的可能性局势发展，还有待进一步观察和厘清。不过她强调，如果普京最终选择入侵乌克兰, 它最终会战败。
+**责编：人间四月**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/22-6.jpg)图片来源：  凤凰网
+根据2022年2月22日  新浪报道， 中共当日晚间发布了一号文件《中共中央国务院关于做好2022年全面推进乡村振兴重点工作的意见》，该文件要求确保粮食安全，端稳中共国十四亿人的“饭碗”。
 
-发稿：谐趣园
+该《意见》提出，当前全球中共新冠病毒仍在蔓延，世界经济复苏脆弱，中共国经济社会发展各项任务极为繁重艰巨，中共必须牢牢守住保障国家粮食安全和不发生规模性返贫两条底线，中央为此提出了保粮食产量、提高农民积极性、保护耕地、提高粮食生产率等措施，由于中共国大豆和油料进口依存度高，其中大豆进口依存度高达80%以上，加上国际油料价格上涨明显，中共决定扩种油料和大豆， 尽可能降低对进口的依赖，文件还提出需要防范重大灾害，近期中共国极端降水、极端干旱等天气事件不断增加， 对粮食生产会有着很大影响 。
 
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+中共国的新闻反着看就能看出真相：第一，中共保障不了粮食安全，并且开始把粮食短缺推给极端恶劣天气。第二，中共国即将发生规模性返贫，也就是人民币不值钱，物价上涨，物资短缺，一夜回到解放前。同胞们，一定要备好相应物资和药品，保护好自己和家人。
+
+**[新闻来源](https://k.sina.cn/article_1784473157_6a5ce64502002fnvn.html?from=news&amp;subch=onews&amp;sinawapsharesource=newsapp&amp;wm=3200_0024)**
+
+#  
 
  
 
