--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,35 +1,27 @@
 ---
-title: 普京出兵乌克兰东部引发世界经济动荡
+title: 日本报告94例BA.2毒株，占Omicron毒株的0.6%
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2053271/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2053326/)
 
-作者：纽约香草山农场 – Noemi
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-当地时间2月21日，据相关媒体消息显示，俄罗斯总统普京于此前一天承认了乌克兰东部的两个分离地区已经独立，随后，其立即下令俄罗斯国防部向它们派遣了所谓的“维和”部队。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/10-18.jpg)
-有目击者表示，俄罗斯的坦克等军事装备目前已经穿过了分离主义控制的城市——顿涅茨克。同时，普京的这些举动加剧了西方对于乌俄之间发生重大战争的担心。
+撰稿：东京樱花团/文小白
 
-另一方面，随着乌克兰军事危机的升级，世界经济也正在经历着巨大的动荡。据悉，全球的石油价格眼下已经跃升至七年以来的最高水平；而日元等避险货币则出现大幅反弹；此外，美、欧地区的股票和期货近期持续暴跌。数据表明，在普京发表讲话时，卢布的跌幅一度超过17%，滑落至每美元可兑换80卢布有余。
+据2月23日NHK消息，根据日本国家传染病研究所等机构的调查，迄今为止，日本已经报告了至少94例BA.2病毒。BA.2是Omicron变异毒株的一种。
 
-此前 ，郭文贵先生曾在盖特中评论称，无论俄乌局势怎样变化，俄、美、欧三方最终会达成合作协议。但在这场军事危机的背后，经济损失最惨重的一定会是中共国和全球所有的普通民众。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/日本报告94例BA.2毒株，占Omicron毒株的0.6.jpg)照片来源于原文链接
 
-参考链接：
-1) .[Putin orders troops to Ukraine after recognizing breakaway regions](https://www.reuters.com/markets/europe/kremlin-says-no-concrete-plans-summit-with-biden-over-ukraine-2022-02-21/)
-2) . [2/21/2022 文贵盖特：中共体制内官员也知中共大势已去；俄美总统要会面，普京是否会弃习投美欧？](https://www.gettr.com/post/pw07zs2799)
+国家传染病研究所等机构一直在对中共病毒的基因分析进行调查，截至本月16日的数据，从去年年底到上个月30日，日本共报告了94例Omicron株BA.2病毒。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
+在同一时期发现了约16,000例BA.1病毒，这是目前病毒的主流，BA.2病毒约占所有Omicron毒株的0.6%。
 
-总编: Irene木木
-编辑: 飞虹
-校正/发稿：Fei797
+东京大学医学研究所副教授Yoshitaka Sato领导的小组的研究结果显示，BA.2病毒在感染时对周围细胞的破坏能力是BA.1病毒的1.5倍，比主流毒株BA.1更能引发感染，虽然它比delta病毒株要弱。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+此外，在仓鼠被感染的实验中，在仓鼠肺部没有检测到BA.1病毒，也没有观察到体重下降。而BA.2毒株病毒在肺部被检测到，并观察到了体重下降。
+
+信息来源：[「BA.2」国内で94件報告 オミクロン株全体の約0.6％に 感染研](https://www3.nhk.or.jp/news/html/20220223/k10013498261000.html?utm_int=news-culture_contents_list-items_002)
+
+*校对：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
